--- a/src/templates/en/accessibility_statement.html
+++ b/src/templates/en/accessibility_statement.html
@@ -41,7 +41,7 @@
         <ul>
           <li>Include accessibility as part of the development of this website.</li>
           <li>Review the accessibility using whatever tools are available.</li>
-          <li>Be transparent about accessibility issues <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">on our GitHub pages</a>.</li>
+          <li>Be transparent about accessibility issues <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">on our GitHub pages</a>.</li>
           <li>Address accessibility issues raised in a timely manner.</li>
           <li>Publish, and keep up to date, this accessibility statement.</li>
         </ul>
@@ -51,19 +51,19 @@
         <h2 id="conformance-status"><a href="#conformance-status" class="anchor-link">Conformance status</a></h2>
 
         <p>
-          The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG)</a> defines requirements for designers and developers to improve accessibility for people with disabilities. It defines three levels of conformance: Level A, Level AA, and Level AAA. The Web Almanac is partially conformant with <a href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a> level AAA. Partially conformant means that some parts of the content do not fully conform to the accessibility standard.
+          The <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG)</a> defines requirements for designers and developers to improve accessibility for people with disabilities. It defines three levels of conformance: Level A, Level AA, and Level AAA. The Web Almanac is partially conformant with <a hreflang="en" href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a> level AAA. Partially conformant means that some parts of the content do not fully conform to the accessibility standard.
         </p>
 
         <p>
-          We consider ourselves partially conformant because we have not completed a full, externally verified, audit of the website, nor had the website reviewed by screen reader users so cannot be confident of our current status. We have audited all the pages on the website using a number of tools, including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>.
+          We consider ourselves partially conformant because we have not completed a full, externally verified, audit of the website, nor had the website reviewed by screen reader users so cannot be confident of our current status. We have audited all the pages on the website using a number of tools, including the <a hreflang="en" href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>.
         </p>
 
         <p>
-          The Web Almanac&#8217;s purpose is to provide detailed information about the status of the web. While we aim to ensure all content is easily read even by non-experts, the nature of the material may mean there may be a level of expertise and technology understanding needed to understand some chapters and some metrics, which may not meet the <a href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1 level AAA reading level guidelines</a>.
+          The Web Almanac&#8217;s purpose is to provide detailed information about the status of the web. While we aim to ensure all content is easily read even by non-experts, the nature of the material may mean there may be a level of expertise and technology understanding needed to understand some chapters and some metrics, which may not meet the <a hreflang="en" href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1 level AAA reading level guidelines</a>.
         </p>
 
         <p>
-          We also use Google Sheets for some interactive visualizations, which may also not be conformant to WCAG accessibility standards. These are loaded via <code>iframes</code> and we do provide images to for all our figures, and only display interactive visualizations when the client software supports this. If using a web browser and you do not wish to view the interactive visualizations, then the images can be enforce by adding a <code>?print</code> query param to any of the chapters, <a href="../accessibility?print">view the Accessibility chapter in print mode</a> for one such example. We can look to make this functionality easier to activate if necessary, but all visualizations have detailed text descriptions, so we do not believe this is necessary. Please <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">let us know</a> if we are incorrect about this.
+          We also use Google Sheets for some interactive visualizations, which may also not be conformant to WCAG accessibility standards. These are loaded via <code>iframes</code> and we do provide images to for all our figures, and only display interactive visualizations when the client software supports this. If using a web browser and you do not wish to view the interactive visualizations, then the images can be enforce by adding a <code>?print</code> query param to any of the chapters, <a href="./2020/accessibility?print">view the Accessibility chapter in print mode</a> for one such example. We can look to make this functionality easier to activate if necessary, but all visualizations have detailed text descriptions, so we do not believe this is necessary. Please <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">let us know</a> if we are incorrect about this.
         </p>
 
         <p>
@@ -95,7 +95,7 @@
         <h2 id="technical-specifications"><a href="#technical-specifications" class="anchor-link">Technical Specifications</a></h2>
 
         <p>
-          The website is built on well structured, semantic HTML (including <a href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> where appropriate), enhanced with CSS for styling and limited JavaScript for some interactive components. The website makes use of modern development practices such as CSS Grid, Fetch, and WOFF2 Fonts, which are not supported in older browsers such as IE 11. The website is still fully functional in those browsers but may not be as visually appealing. No extra plugins or libraries should be required to view the website.
+          The website is built on well structured, semantic HTML (including <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> where appropriate), enhanced with CSS for styling and limited JavaScript for some interactive components. The website makes use of modern development practices such as CSS Grid, Fetch, and WOFF2 Fonts, which are not supported in older browsers such as IE 11. The website is still fully functional in those browsers but may not be as visually appealing. No extra plugins or libraries should be required to view the website.
         </p>
         <p>
           The Web Almanac PDF follows the same accessibility standards as the website and additionally, is a structurally tagged to aid accessibility.
@@ -106,7 +106,7 @@
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">Assessment Approach</a></h2>
 
         <p>
-          Self-evaluation: the content was evaluated by the Web Almanac team using their own expertise and a number of tools including the <a href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>. The Web Almanac PDF was tested with an Accessibility Scan in Acrobat Reader Pro DC.
+          Self-evaluation: the content was evaluated by the Web Almanac team using their own expertise and a number of tools including the <a hreflang="en" href="https://wave.webaim.org/">WAVE Accessibility Tool</a>, the <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefox Accessibility Inspector</a> and the <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chrome plugin</a>. The Web Almanac PDF was tested with an Accessibility Scan in Acrobat Reader Pro DC.
         </p>
       </section>
 
@@ -114,7 +114,7 @@
         <h2 id="feedback"><a href="#feedback" class="anchor-link">Feedback</a></h2>
 
         <p>
-          We welcome feedback on the accessibility of this website. The best ways to reach us would be to <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">raise an issue on GitHub</a> or email us at <a href="mailto:team@httparchive.org">team@httparchive.org</a>. We would also welcome pull requests for those that wish to contribute directly. The Web Almanac is a community based project, managed by volunteers, and so we cannot guarantee a time frame for responding to feedback but will respond as soon as possible.
+          We welcome feedback on the accessibility of this website. The best ways to reach us would be to <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">raise an issue on GitHub</a> or email us at <a href="mailto:team@httparchive.org">team@httparchive.org</a>. We would also welcome pull requests for those that wish to contribute directly. The Web Almanac is a community based project, managed by volunteers, and so we cannot guarantee a time frame for responding to feedback but will respond as soon as possible.
         </p>
       </section>
 {% endblock %}
