--- a/src/templates/fr/2020/base.html
+++ b/src/templates/fr/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Je vous prie d’apprécier le Web Almanac 2020, le point culminant de notre travail d’amour pour le web. N’hésitez pas à <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">nous contacter</a> si vous souhaitez rejoindre l’équipe.
+    Je vous prie d’apprécier le Web Almanac 2020, le point culminant de notre travail d’amour pour le web. N’hésitez pas à <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">nous contacter</a> si vous souhaitez rejoindre l’équipe.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Rédacteur en chef du Web Almanac</em></p>
