--- a/src/templates/ja/accessibility_statement.html
+++ b/src/templates/ja/accessibility_statement.html
@@ -41,7 +41,7 @@
         <ul>
           <li>このウェブサイトの開発の一環として、アクセシビリティを考慮してください。</li>
           <li>使えるツールがあれば何でもいいので、アクセシビリティの見直しをしましょう。</li>
-          <li>アクセシビリティの問題について透明性を保つ<a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">GitHubのページ</a> 。</li>
+          <li>アクセシビリティの問題について透明性を保つ<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">GitHubのページ</a> 。</li>
           <li>提起されたアクセシビリティの問題にタイムリーに対応します。</li>
           <li>このアクセシビリティ・ステートメントを公開し、最新の状態に保つ。</li>
         </ul>
@@ -51,19 +51,19 @@
         <h2 id="conformance-status"><a href="#conformance-status" class="anchor-link">適合状況</a></h2>
 
         <p>
-          <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">ウェブコンテンツアクセシビリティガイドライン(WCAG)</a>は、障害者のアクセシビリティを向上させるためのデザイナーや開発者の要件を定義しています。これは、3つのレベルの適合性を定義しています。レベルA、レベルAA、およびレベルAAAです。Web Almanacは、<a href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a>レベルAAAに部分的に準拠しています。部分的に適合しているとは、コンテンツの一部がアクセシビリティ基準に完全に適合していないことを意味します。
+          <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/wcag/">ウェブコンテンツアクセシビリティガイドライン(WCAG)</a>は、障害者のアクセシビリティを向上させるためのデザイナーや開発者の要件を定義しています。これは、3つのレベルの適合性を定義しています。レベルA、レベルAA、およびレベルAAAです。Web Almanacは、<a hreflang="en" href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a>レベルAAAに部分的に準拠しています。部分的に適合しているとは、コンテンツの一部がアクセシビリティ基準に完全に適合していないことを意味します。
         </p>
 
         <p>
-          私達は、ウェブサイトの完全な外部検証による監査を完了しておらず、また、スクリーンリーダーのユーザーによるレビューも受けていないので現在の状況に自信が持てないため、部分的に適合していると考えています。<a href="https://wave.webaim.org/">WAVEアクセシビリティツール</a>、<a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefoxアクセシビリティインスペクター</a>、<a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chromeプラグイン</a>など、多くのツールを使用してウェブサイトの全ページを監査しています。
+          私達は、ウェブサイトの完全な外部検証による監査を完了しておらず、また、スクリーンリーダーのユーザーによるレビューも受けていないので現在の状況に自信が持てないため、部分的に適合していると考えています。<a hreflang="en" href="https://wave.webaim.org/">WAVEアクセシビリティツール</a>、<a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefoxアクセシビリティインスペクター</a>、<a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chromeプラグイン</a>など、多くのツールを使用してウェブサイトの全ページを監査しています。
         </p>
 
         <p>
-          Web Almanacの目的は、ウェブの状況に関する詳細な情報を提供することです。すべてのコンテンツが専門家でなくても読みやすいものであることを目指していますが、素材の性質上、一部の章や一部の指標を理解するのに必要な専門知識や技術的な理解度が、<a href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1レベルAAA読解レベルガイドライン</a>を満たしていない可能性があることを意味します。
+          Web Almanacの目的は、ウェブの状況に関する詳細な情報を提供することです。すべてのコンテンツが専門家でなくても読みやすいものであることを目指していますが、素材の性質上、一部の章や一部の指標を理解するのに必要な専門知識や技術的な理解度が、<a hreflang="en" href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1レベルAAA読解レベルガイドライン</a>を満たしていない可能性があることを意味します。
         </p>
 
         <p>
-          また、一部のインタラクティブな視覚化にはGoogleシートを使用していますが、これもWCAGアクセシビリティ基準に準拠していない可能性があります。これらは<code>iframes</code>を介して読み込まれ、すべての図形に画像を提供していて、クライアントソフトウェアがこれをサポートしている場合のみ、インタラクティブな視覚化を表示します。ブラウザーを使用していて、インタラクティブな視覚化を表示したくない場合、章のいずれかに<code>?print</code>クエリパラメータを追加することで、<a href="../accessibility?print">アクセシビリティの印刷モードで表示</a>できます。必要に応じて、この機能をより簡単に有効化できるようにすることもできますが、すべての視覚化には詳細なテキスト記述があるので、これは必要ないと考えています。<a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">間違っていたらお知らせください</a>。
+          また、一部のインタラクティブな視覚化にはGoogleシートを使用していますが、これもWCAGアクセシビリティ基準に準拠していない可能性があります。これらは<code>iframes</code>を介して読み込まれ、すべての図形に画像を提供していて、クライアントソフトウェアがこれをサポートしている場合のみ、インタラクティブな視覚化を表示します。ブラウザーを使用していて、インタラクティブな視覚化を表示したくない場合、章のいずれかに<code>?print</code>クエリパラメータを追加することで、<a href="./2020/accessibility?print">アクセシビリティの印刷モードで表示</a>できます。必要に応じて、この機能をより簡単に有効化できるようにすることもできますが、すべての視覚化には詳細なテキスト記述があるので、これは必要ないと考えています。<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">間違っていたらお知らせください</a>。
         </p>
 
         <p>
@@ -95,7 +95,7 @@
         <h2 id="technical-specifications"><a href="#technical-specifications" class="anchor-link">技術仕様</a></h2>
 
         <p>
-          このウェブサイトは、<a href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a>を含む、よく構造化されたセマンティックなHTMLに基づいて構築されており、スタイリングにはCSSを使用し、一部のインタラクティブなコンポーネントには限定的なJavaScriptを使用しています。このウェブサイトは、IE 11などの古いブラウザではサポートされていないCSS Grid、Fetch、WOFF2フォントなどの最新の開発手法を利用しています。ウェブサイトはこれらのブラウザではまだ完全に機能していますが、視覚的に魅力的ではないかもしれません。ウェブサイトを表示するために余分なプラグインやライブラリは必要ありません。
+          このウェブサイトは、<a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a>を含む、よく構造化されたセマンティックなHTMLに基づいて構築されており、スタイリングにはCSSを使用し、一部のインタラクティブなコンポーネントには限定的なJavaScriptを使用しています。このウェブサイトは、IE 11などの古いブラウザではサポートされていないCSS Grid、Fetch、WOFF2フォントなどの最新の開発手法を利用しています。ウェブサイトはこれらのブラウザではまだ完全に機能していますが、視覚的に魅力的ではないかもしれません。ウェブサイトを表示するために余分なプラグインやライブラリは必要ありません。
         </p>
         <p>
           Web Almanac PDFは、Webサイトと同じアクセシビリティ基準に準拠しており、さらにアクセシビリティを支援するために構造的にタグ付けされています。
@@ -106,7 +106,7 @@
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">評価アプローチ</a></h2>
 
         <p>
-          自己評価：コンテンツの評価は、Web Almanacチームが独自の専門知識と、<a href="https://wave.webaim.org/">WAVEアクセシビリティツール</a>、<a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefoxアクセシビリティインスペクター</a>、<a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chromeプラグイン</a>などの多くのツールを使用して行いました。Web Almanac PDFは、Acrobat Reader Pro DCのアクセシビリティ・スキャンでテストされました。
+          自己評価：コンテンツの評価は、Web Almanacチームが独自の専門知識と、<a hreflang="en" href="https://wave.webaim.org/">WAVEアクセシビリティツール</a>、<a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">Firefoxアクセシビリティインスペクター</a>、<a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">AXE Chromeプラグイン</a>などの多くのツールを使用して行いました。Web Almanac PDFは、Acrobat Reader Pro DCのアクセシビリティ・スキャンでテストされました。
         </p>
       </section>
 
@@ -114,7 +114,7 @@
         <h2 id="feedback"><a href="#feedback" class="anchor-link">フィードバック</a></h2>
 
         <p>
-          このウェブサイトのアクセシビリティに関するフィードバックを歓迎します。<a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">GitHub</a>で問題を提起するか、<a href="mailto:team@httparchive.org">team@httparchive.org</a>までメールでお問い合わせください。また、直接貢献したい方のプルリクエストも歓迎します。Web Almanacはボランティアによって運営されているコミュニティベースのプロジェクトであるため、フィードバックへの回答の期限を保証するものではありませんが、可能な限り速やかに対応します。
+          このウェブサイトのアクセシビリティに関するフィードバックを歓迎します。<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">GitHub</a>で問題を提起するか、<a href="mailto:team@httparchive.org">team@httparchive.org</a>までメールでお問い合わせください。また、直接貢献したい方のプルリクエストも歓迎します。Web Almanacはボランティアによって運営されているコミュニティベースのプロジェクトであるため、フィードバックへの回答の期限を保証するものではありませんが、可能な限り速やかに対応します。
         </p>
       </section>
 {% endblock %}
