--- a/src/templates/zh-TW/2020/methodology.html
+++ b/src/templates/zh-TW/2020/methodology.html
@@ -76,7 +76,7 @@
         </p>
 
         <p>
-          Web Almanac 網路年鑑列示的指標可以透過執行 BigQuery 公共資料集後重現。你可以瀏覽所有章節使用的查詢在 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">GitHub</a> 程式庫。
+          Web Almanac 網路年鑑列示的指標可以透過執行 BigQuery 公共資料集後重現。你可以瀏覽所有章節使用的查詢在 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">GitHub</a> 程式庫。
         </p>
 
         <p class="note">
@@ -84,7 +84,7 @@
         </p>
 
         <p>
-          例如，你可以瞭解 JavaScript 在桌機版與手機版網頁運行的中位數，請查閱<a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>：
+          例如，你可以瞭解 JavaScript 在桌機版與手機版網頁運行的中位數，請查閱<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>：
         </p>
 
         <div class="code-block floating-card">
@@ -244,7 +244,7 @@
       </p>
 
       <p>
-        HTTP Archive 在 WebPageTest 的私有實例保持與最新的公共版本同步，且增加使用<a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自訂指標</a>。在測試的尾聲透過片段的 JavaScript 評估每個網站。感謝許多數據分析的<a href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">貢獻者</a>，特別是<a href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">熱血拋顱</a>的 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='Tiggerito') }}">Tony McCreath</a>。 Web Almanac 網路年鑑2020年版致力拓展 HTTP Archive 的基礎測試架構功能，揮灑超過三千行的新程式碼。
+        HTTP Archive 在 WebPageTest 的私有實例保持與最新的公共版本同步，且增加使用<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自訂指標</a>。在測試的尾聲透過片段的 JavaScript 評估每個網站。感謝許多數據分析的<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">貢獻者</a>，特別是<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">熱血拋顱</a>的 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='Tiggerito') }}">Tony McCreath</a>。 Web Almanac 網路年鑑2020年版致力拓展 HTTP Archive 的基礎測試架構功能，揮灑超過三千行的新程式碼。
       </p>
 
       <p>
@@ -304,7 +304,7 @@
       <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
-        <a href="https://www.wappalyzer.com/">Wappalyzer</a>是偵測網頁所使用的技術工具。它有<a hreflang="en" href="https://www.wappalyzer.com/technologies">64個類別</a>可以被用來偵測各種技術種類。從 JavaScript 框架到 CMS 平台，甚至是加密貨幣挖礦，被支持的科技超過一千四百多種。
+        <a hreflang="en" href="https://www.wappalyzer.com/">Wappalyzer</a>是偵測網頁所使用的技術工具。它有<a hreflang="en" href="https://www.wappalyzer.com/technologies">64個類別</a>可以被用來偵測各種技術種類。從 JavaScript 框架到 CMS 平台，甚至是加密貨幣挖礦，被支持的科技超過一千四百多種。
       </p>
 
       <p>
@@ -368,7 +368,7 @@
       <h4 id="rework-utils"><a href="#rework-utils" class="anchor-link">Rework Utils</a></h4>
 
       <p>
-        今年 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章節更詳細研究 CSS 的狀態，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a> 主導，透過<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020/css">100+個查詢</a>運行。這個觀點的查詢數量是2019年的2.5倍。為了讓這個規模的分析可行，Lea 開源 <a hreflang="en" href="https://github.com/LeaVerou/rework-utils">Rework Utils</a>。CSS 大部分的章節都來自這些程式碼腳本，這帶領 JSON 資料從 Rework 更進階，讓 CSS 更容易被分析洞察。
+        今年 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章節更詳細研究 CSS 的狀態，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a> 主導，透過<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020/css">100+個查詢</a>運行。這個觀點的查詢數量是2019年的2.5倍。為了讓這個規模的分析可行，Lea 開源 <a hreflang="en" href="https://github.com/LeaVerou/rework-utils">Rework Utils</a>。CSS 大部分的章節都來自這些程式碼腳本，這帶領 JSON 資料從 Rework 更進階，讓 CSS 更容易被分析洞察。
       </p>
     </section>
 
@@ -396,7 +396,7 @@
       </p>
 
       <p>
-        正如我們在<a href="https://almanac.httparchive.org/en/2019/methodology#brainstorming">去年統計方法</a>的陳述：
+        正如我們在<a href="../2019/methodology#brainstorming">去年統計方法</a>的陳述：
       </p>
 
       <blockquote>
@@ -435,7 +435,7 @@
       <h3 id="analysis"><a href="#analysis" class="anchor-link">分析</a></h3>
 
       <p>
-        2020年7月和8月，在指標和章節的列表拍板後，數據分析師對指標的可行性進行篩選。在某些情況，<a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自訂指標</a>已經產生，且用來填補分析的能力。
+        2020年7月和8月，在指標和章節的列表拍板後，數據分析師對指標的可行性進行篩選。在某些情況，<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自訂指標</a>已經產生，且用來填補分析的能力。
       </p>
 
       <p>
@@ -443,7 +443,7 @@
       </p>
 
       <p>
-        資料分析師開始撰寫查詢並執行每個指標的結果。整體來說，這數百個查詢都是由人工親手撰寫累積！你可以在我們 GitHub 開源的資料庫 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">query repository</a> 目錄下瀏覽所有的程式碼。
+        資料分析師開始撰寫查詢並執行每個指標的結果。整體來說，這數百個查詢都是由人工親手撰寫累積！你可以在我們 GitHub 開源的資料庫 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">query repository</a> 目錄下瀏覽所有的程式碼。
       </p>
     </section>
 
