--- a/src/templates/en/2020/base.html
+++ b/src/templates/en/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Please enjoy the 2020 Web Almanac, the culmination of our labor of love for the web. And be sure to <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">reach out</a> if you&#8217;d like to join the team.
+    Please enjoy the 2020 Web Almanac, the culmination of our labor of love for the web. And be sure to <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">reach out</a> if you&#8217;d like to join the team.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Editor-in-Chief</em></p>
