--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -94,7 +94,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% macro edition(year) %}{{ year }} Edition{% endmacro %}
 
 {% block footer_title %}Footer navigation{% endblock %}
-{% block copyright %}© Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Licensed under <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Accessibility Statement{% endblock %}
 
 {% block featured_chapter %}Featured Chapter{% endblock %}
