--- a/src/templates/es/accessibility_statement.html
+++ b/src/templates/es/accessibility_statement.html
@@ -41,7 +41,7 @@
         <ul>
           <li>Incluir la accesibilidad como parte del desarrollo de este sitio web.</li>
           <li>Revisar la accesibilidad utilizando las herramientas disponibles.</li>
-          <li>Ser transparentes sobre los problemas de accesibilidad <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+" hreflang="en">en nuestra página de GitHub</a>.</li>
+          <li>Ser transparentes sobre los problemas de accesibilidad <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+" hreflang="en">en nuestra página de GitHub</a>.</li>
           <li>Abordar los problemas de accesibilidad que se planteen de manera oportuna.</li>
           <li>Publicar y mantener actualizada esta declaración de accesibilidad.</li>
         </ul>
@@ -51,19 +51,19 @@
         <h2 id="conformance-status"><a href="#conformance-status" class="anchor-link">Estado de conformidad</a></h2>
 
         <p>
-          Las <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" hreflang="en">Web Content Accessibility Guidelines (WCAG)</a> definen los lineamientos para que diseñadores y desarrolladores apliquen y mejoren la accesibilidad, especialmente a personas con discapacidades. Define tres niveles de conformidad: Nivel A, Nivel AA y Nivel AAA. El Web Almanac cumple parcialmente con <a href="https://www.w3.org/TR/WCAG21/" hreflang="en">WCAG 2.1</a> Nivel AAA. Parcialmente significa que algunas partes del contenido no se ajustan completamente al estándar de accesibilidad.
+          Las <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/wcag/" hreflang="en">Web Content Accessibility Guidelines (WCAG)</a> definen los lineamientos para que diseñadores y desarrolladores apliquen y mejoren la accesibilidad, especialmente a personas con discapacidades. Define tres niveles de conformidad: Nivel A, Nivel AA y Nivel AAA. El Web Almanac cumple parcialmente con <a hreflang="en" href="https://www.w3.org/TR/WCAG21/" hreflang="en">WCAG 2.1</a> Nivel AAA. Parcialmente significa que algunas partes del contenido no se ajustan completamente al estándar de accesibilidad.
         </p>
 
         <p>
-          Nos consideramos parcialmente conformes porque no hemos completado una auditoría completa, verificada externamente, del sitio web, ni los usuarios de lectores de pantalla lo han revisado, por lo que no podemos estar seguros de nuestro estado actual. Hemos auditado todas las páginas del sitio web utilizando varias herramientas., incluyendo el <a href="https://wave.webaim.org/" hreflang="en">WAVE Accessibility Tool</a>, el <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/" hreflang="en">Firefox Accessibility Inspector</a> y el <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" hreflang="en" rel="nofollow">AXE Chrome plugin</a>.
+          Nos consideramos parcialmente conformes porque no hemos completado una auditoría completa, verificada externamente, del sitio web, ni los usuarios de lectores de pantalla lo han revisado, por lo que no podemos estar seguros de nuestro estado actual. Hemos auditado todas las páginas del sitio web utilizando varias herramientas., incluyendo el <a hreflang="en" href="https://wave.webaim.org/" hreflang="en">WAVE Accessibility Tool</a>, el <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/" hreflang="en">Firefox Accessibility Inspector</a> y el <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" hreflang="en" rel="nofollow">AXE Chrome plugin</a>.
         </p>
 
         <p>
-          El propósito de Web Almanac es proporcionar información detallada sobre el estado de la web. Si bien nuestro objetivo es garantizar que todo el contenido sea leído fácilmente, incluso por no expertos, la naturaleza del material puede significar que puede haber un nivel de experiencia y comprensión de la tecnología necesarios para comprender algunos capítulos y algunas métricas, que puede no cumplir con las <a href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level" hreflang="en">pautas WCAG 2.1 Nivel AAA de nivel de lectura</a>.
+          El propósito de Web Almanac es proporcionar información detallada sobre el estado de la web. Si bien nuestro objetivo es garantizar que todo el contenido sea leído fácilmente, incluso por no expertos, la naturaleza del material puede significar que puede haber un nivel de experiencia y comprensión de la tecnología necesarios para comprender algunos capítulos y algunas métricas, que puede no cumplir con las <a hreflang="en" href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level" hreflang="en">pautas WCAG 2.1 Nivel AAA de nivel de lectura</a>.
         </p>
 
         <p>
-          También usamos Google Sheets para algunas visualizaciones interactivas, que también puede no cumplir con los estándares de accesibilidad WCAG. Estos son cargados vía <code>iframes</code> y proporcionamos imágenes para todas nuestras figuras, y solo mostramos visualizaciones interactivas cuando el software cliente lo soporta. Si utiliza un navegador web y no desea ver las visualizaciones interactivas, entonces las imágenes se pueden hacer ver agregando un <code>?print</code> como parámetro de consulta a cualquiera de los capítulos, <a href="../accessibility?print">vea el capítulo de Accesibilidad en modo de impresión</a> para ver un ejemplo. Podemos buscar que esta funcionalidad sea más fácil de activar si es necesario, pero todas las visualizaciones tienen descripciones de texto detalladas, por lo que no creemos que sea necesario. Por favor <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues" hreflang="en">haznos saber</a> si estamos en lo cierto o no acerca de esto.
+          También usamos Google Sheets para algunas visualizaciones interactivas, que también puede no cumplir con los estándares de accesibilidad WCAG. Estos son cargados vía <code>iframes</code> y proporcionamos imágenes para todas nuestras figuras, y solo mostramos visualizaciones interactivas cuando el software cliente lo soporta. Si utiliza un navegador web y no desea ver las visualizaciones interactivas, entonces las imágenes se pueden hacer ver agregando un <code>?print</code> como parámetro de consulta a cualquiera de los capítulos, <a href="./2020/accessibility?print">vea el capítulo de Accesibilidad en modo de impresión</a> para ver un ejemplo. Podemos buscar que esta funcionalidad sea más fácil de activar si es necesario, pero todas las visualizaciones tienen descripciones de texto detalladas, por lo que no creemos que sea necesario. Por favor <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues" hreflang="en">haznos saber</a> si estamos en lo cierto o no acerca de esto.
         </p>
 
         <p>
@@ -95,7 +95,7 @@
         <h2 id="technical-specifications"><a href="#technical-specifications" class="anchor-link">Especificaciones técnicas</a></h2>
 
         <p>
-          El sitio web está construido sobre, HTML semántico (incluyendo  <a href="https://www.w3.org/WAI/standards-guidelines/aria/" hreflang="en">WAI-ARIA</a> donde corresponda), mejorando con CSS para los estilos y JavaScript limitado para algunos componentes interactivos. El sitio web hace uso de prácticas de desarrollo modernas como CSS Grid, Fetch, y fuentes (tipografía) WOFF2, que no son compatibles con antiguos navegadores como IE 11. El sitio web sigue siendo completamente funcional en estos navegadores, pero puede que no sea tan atractivo visualmente. No se deben requerir complementos o bibliotecas adicionales para ver el sitio web.
+          El sitio web está construido sobre, HTML semántico (incluyendo  <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/aria/" hreflang="en">WAI-ARIA</a> donde corresponda), mejorando con CSS para los estilos y JavaScript limitado para algunos componentes interactivos. El sitio web hace uso de prácticas de desarrollo modernas como CSS Grid, Fetch, y fuentes (tipografía) WOFF2, que no son compatibles con antiguos navegadores como IE 11. El sitio web sigue siendo completamente funcional en estos navegadores, pero puede que no sea tan atractivo visualmente. No se deben requerir complementos o bibliotecas adicionales para ver el sitio web.
         </p>
         <p>
           El PDF de Web Almanac sigue los mismos estándares de accesibilidad que el sitio web y, además, está etiquetado estructuralmente para facilitar la accesibilidad.
@@ -106,7 +106,7 @@
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">Enfoque de evaluación</a></h2>
 
         <p>
-          Autoevaluación: el equipo de Web Almanac evaluó el contenido utilizando su propia experiencia y una serie de herramientas, incluida la <a href="https://wave.webaim.org/" hreflang="en">WAVE Accessibility Tool</a>, el <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/" hreflang="en">Firefox Accessibility Inspector</a> y el <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" hreflang="en" rel="nofollow">AXE Chrome plugin</a>. El PDF de Web Almanac se probó con un escaneo de accesibilidad en Acrobat Reader Pro DC.
+          Autoevaluación: el equipo de Web Almanac evaluó el contenido utilizando su propia experiencia y una serie de herramientas, incluida la <a hreflang="en" href="https://wave.webaim.org/" hreflang="en">WAVE Accessibility Tool</a>, el <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/" hreflang="en">Firefox Accessibility Inspector</a> y el <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" hreflang="en" rel="nofollow">AXE Chrome plugin</a>. El PDF de Web Almanac se probó con un escaneo de accesibilidad en Acrobat Reader Pro DC.
         </p>
       </section>
 
@@ -114,7 +114,7 @@
         <h2 id="feedback"><a href="#feedback" class="anchor-link">Retroalimentación</a></h2>
 
         <p>
-          Agradecemos sus comentarios sobre la accesibilidad de este sitio web. Las mejores maneras de llegar a nosotros sería <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues" hreflang="en">plantear un problema en GitHub</a> o envíenos un correo electrónico a <a href="mailto:team@httparchive.org">team@httparchive.org</a>. También agradeceríamos Pull Request para aquellos que deseen contribuir directamente. Web Almanac es un proyecto basado en la comunidad, administrado por voluntarios, por lo que no podemos garantizar un plazo de tiempo para responder a los comentarios, pero responderemos lo antes posible.
+          Agradecemos sus comentarios sobre la accesibilidad de este sitio web. Las mejores maneras de llegar a nosotros sería <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues" hreflang="en">plantear un problema en GitHub</a> o envíenos un correo electrónico a <a href="mailto:team@httparchive.org">team@httparchive.org</a>. También agradeceríamos Pull Request para aquellos que deseen contribuir directamente. Web Almanac es un proyecto basado en la comunidad, administrado por voluntarios, por lo que no podemos garantizar un plazo de tiempo para responder a los comentarios, pero responderemos lo antes posible.
         </p>
       </section>
 {% endblock %}
