--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}Edición {{ year }}{% endmacro %}
 
 {% block footer_title %}Navegación de pie de página{% endblock %}
-{% block copyright %}© Web Almanac. Con licencia <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Con licencia <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Declaración de accesibilidad{% endblock %}
 
 {% block featured_chapter %}Capítulo destacado{% endblock %}
