--- a/src/templates/hi/accessibility_statement.html
+++ b/src/templates/hi/accessibility_statement.html
@@ -41,7 +41,7 @@
         <ul>
           <li>अभिगम्यता को डेवलपमेंट के हिस्से के रूप में शामिल किया गया हैं।</li>
           <li>जो भी उपकरण उपलब्ध हैं, उनका उपयोग करके अभिगम्यता की समीक्षा की गई हैं।</li>
-          <li>हमारे <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">GitHub पेजों</a> पर अभिगम्यता के मुद्दों के बारे में पारदर्शिता रखी जाती हैं।</li>
+          <li>हमारे <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">GitHub पेजों</a> पर अभिगम्यता के मुद्दों के बारे में पारदर्शिता रखी जाती हैं।</li>
           <li>समयबद्ध तरीके से उठाए गए अभिगम्यता के मुद्दों का निवारण किया जाता हैं।</li>
           <li>लगातार अभिगम्यता विवरण को प्रकाशित तथा अपडेट किया जाता हैं।</li>
         </ul>
@@ -51,19 +51,19 @@
         <h2 id="conformance-status"><a href="#conformance-status" class="anchor-link">अनुरूपता की स्थिति</a></h2>
 
         <p>
-          <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">वेब कंटेंट एक्सेसिबिलिटी गाइडलाइंस (WCAG)</a> विकलांग लोगों के लिए अभिगम्यता में सुधार करने के लिए डिजाइनरों और डेवलपर्स के लिए आवश्यकताओं को परिभाषित करता है। यह तीन स्तरों के अनुरूपता को परिभाषित करता है: स्तर A, स्तर AA, और स्तर AAA।  Web Almanac <a href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a> स्तर AAA के साथ आंशिक रूप से अनुरूप है। आंशिक रूप से अनुरूपता का मतलब है कि सामग्री के कुछ हिस्से पूरी तरह से एक्सेसिबिलिटी मानक के अनुरूप नही हैं।
+          <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/wcag/">वेब कंटेंट एक्सेसिबिलिटी गाइडलाइंस (WCAG)</a> विकलांग लोगों के लिए अभिगम्यता में सुधार करने के लिए डिजाइनरों और डेवलपर्स के लिए आवश्यकताओं को परिभाषित करता है। यह तीन स्तरों के अनुरूपता को परिभाषित करता है: स्तर A, स्तर AA, और स्तर AAA।  Web Almanac <a hreflang="en" href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a> स्तर AAA के साथ आंशिक रूप से अनुरूप है। आंशिक रूप से अनुरूपता का मतलब है कि सामग्री के कुछ हिस्से पूरी तरह से एक्सेसिबिलिटी मानक के अनुरूप नही हैं।
         </p>
 
         <p>
-          हम खुद को आंशिक रूप से अनुरूप मानते हैं क्योंकि हमने वेबसाइट का पूर्ण, बाहरी रूप से सत्यापित, ऑडिट नहीं किया है, और न ही स्क्रीन रीडर उपयोगकर्ताओं द्वारा वेबसाइट की समीक्षा की गई थी अतः हमारी वर्तमान स्थिति पर ज्यादा भरोसा नहीं किया जा सकता। हमने वेबसाइट पर सभी पृष्ठों को कई उपकरणों का उपयोग करके ऑडिट किया है, जिसमें <a href="https://wave.webaim.org/">वेव एक्सेसिबिलिटी टूल</a>, <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">फ़ायरफ़ॉक्स एक्सेसिबिलिटी इंस्पेक्टर</a> और <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">एएक्स क्रोम प्लगइन</a> शामिल हैं।
+          हम खुद को आंशिक रूप से अनुरूप मानते हैं क्योंकि हमने वेबसाइट का पूर्ण, बाहरी रूप से सत्यापित, ऑडिट नहीं किया है, और न ही स्क्रीन रीडर उपयोगकर्ताओं द्वारा वेबसाइट की समीक्षा की गई थी अतः हमारी वर्तमान स्थिति पर ज्यादा भरोसा नहीं किया जा सकता। हमने वेबसाइट पर सभी पृष्ठों को कई उपकरणों का उपयोग करके ऑडिट किया है, जिसमें <a hreflang="en" href="https://wave.webaim.org/">वेव एक्सेसिबिलिटी टूल</a>, <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">फ़ायरफ़ॉक्स एक्सेसिबिलिटी इंस्पेक्टर</a> और <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">एएक्स क्रोम प्लगइन</a> शामिल हैं।
         </p>
 
         <p>
-          Web Almanac का उद्देश्य वेब की स्थिति के बारे में विस्तृत जानकारी प्रदान करना है। हालांकि हम यह सुनिश्चित करना चाहते हैं कि सभी सामग्री गैर-विशेषज्ञों द्वारा भी आसानी से पढ़ी जा सकें, सामग्री की प्रकृति का मतलब हो सकता है कि कुछ अध्यायों और कुछ मैट्रिक्स को समझने के लिए आवश्यक विशेषज्ञता और प्रौद्योगिकी की समझ हो, जो <a href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1 स्तर AAA पढ़ने के स्तर के दिशानिर्देश</a> को पूरा नहीं करते हैं।
+          Web Almanac का उद्देश्य वेब की स्थिति के बारे में विस्तृत जानकारी प्रदान करना है। हालांकि हम यह सुनिश्चित करना चाहते हैं कि सभी सामग्री गैर-विशेषज्ञों द्वारा भी आसानी से पढ़ी जा सकें, सामग्री की प्रकृति का मतलब हो सकता है कि कुछ अध्यायों और कुछ मैट्रिक्स को समझने के लिए आवश्यक विशेषज्ञता और प्रौद्योगिकी की समझ हो, जो <a hreflang="en" href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1 स्तर AAA पढ़ने के स्तर के दिशानिर्देश</a> को पूरा नहीं करते हैं।
         </p>
 
         <p>
-          हम कुछ इंटरेक्टिव विज़ुअलाइज़ेशन के लिए Google शीट का भी उपयोग करते हैं, जो शायद WCAG पहुंच मानकों के अनुरूप न हो। ये <code>iframes</code> के माध्यम से लोड होते हैं और अपने सभी आंकड़ों के लिए चित्र प्रदान करते हैं, और केवल इंटरेक्टिव विज़ुअलाइज़ेशन प्रदर्शित करते हैं जब क्लाइंट सॉफ़्टवेयर इस का समर्थन करता है। यदि वेब ब्राउज़र का उपयोग कर रहे हैं और आप इंटरेक्टिव विज़ुअलाइज़ेशन को देखने की इच्छा नहीं रखते हैं, तो छवियों को किसी भी अध्याय में <code>?print</code> क्वेरी परम जोड़कर लागू किया जा सकता है, ऐसे एक उदाहरण के लिए <a href="../accessibility?print">प्रिंट मोड में एक्सेसिबिलिटी अध्याय देखें</a>। यदि आवश्यक हो तो हम इस कार्यक्षमता को सक्रिय करने के लिए आसान बना सकते हैं, लेकिन सभी विज़ुअलाइज़ेशन में विस्तृत पाठ विवरण हैं, इसलिए हमें नहीं लगता कि यह आवश्यक है। कृपया <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">हमें बताएं</a> अगर हम इस बारे में गलत हैं।
+          हम कुछ इंटरेक्टिव विज़ुअलाइज़ेशन के लिए Google शीट का भी उपयोग करते हैं, जो शायद WCAG पहुंच मानकों के अनुरूप न हो। ये <code>iframes</code> के माध्यम से लोड होते हैं और अपने सभी आंकड़ों के लिए चित्र प्रदान करते हैं, और केवल इंटरेक्टिव विज़ुअलाइज़ेशन प्रदर्शित करते हैं जब क्लाइंट सॉफ़्टवेयर इस का समर्थन करता है। यदि वेब ब्राउज़र का उपयोग कर रहे हैं और आप इंटरेक्टिव विज़ुअलाइज़ेशन को देखने की इच्छा नहीं रखते हैं, तो छवियों को किसी भी अध्याय में <code>?print</code> क्वेरी परम जोड़कर लागू किया जा सकता है, ऐसे एक उदाहरण के लिए <a href="./2020/accessibility?print">प्रिंट मोड में एक्सेसिबिलिटी अध्याय देखें</a>। यदि आवश्यक हो तो हम इस कार्यक्षमता को सक्रिय करने के लिए आसान बना सकते हैं, लेकिन सभी विज़ुअलाइज़ेशन में विस्तृत पाठ विवरण हैं, इसलिए हमें नहीं लगता कि यह आवश्यक है। कृपया <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">हमें बताएं</a> अगर हम इस बारे में गलत हैं।
         </p>
 
         <p>
@@ -95,7 +95,7 @@
         <h2 id="technical-specifications"><a href="#technical-specifications" class="anchor-link">तकनीकी निर्देश</a></h2>
 
         <p>
-          वेबसाइट अच्छी तरह से संरचित, सिमेंटिक HTML ( <a href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> सहित जहां उपयुक्त है) पर बनाया गया है, स्टाइल के लिए CSS और कुछ इंटरैक्टिव चीजों के लिए सीमित JavaScript का उपयोग किया गया है। वेबसाइट CSS ग्रिड, Fetch, और WOFF2 फ़ॉन्ट्स जैसे आधुनिक डेवलपमेंट तकनीकों का उपयोग करती है, जो IE 11 जैसे पुराने ब्राउज़रों में समर्थित नहीं हैं। वेबसाइट अभी भी उन ब्राउज़रों में पूरी तरह कार्यात्मक है, लेकिन नेत्रहीन रूप से आकर्षक नहीं हो सकती है। वेबसाइट देखने के लिए किसी अतिरिक्त प्लगइन्स या लाइब्रेरी की आवश्यकता नहीं हैं।
+          वेबसाइट अच्छी तरह से संरचित, सिमेंटिक HTML ( <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> सहित जहां उपयुक्त है) पर बनाया गया है, स्टाइल के लिए CSS और कुछ इंटरैक्टिव चीजों के लिए सीमित JavaScript का उपयोग किया गया है। वेबसाइट CSS ग्रिड, Fetch, और WOFF2 फ़ॉन्ट्स जैसे आधुनिक डेवलपमेंट तकनीकों का उपयोग करती है, जो IE 11 जैसे पुराने ब्राउज़रों में समर्थित नहीं हैं। वेबसाइट अभी भी उन ब्राउज़रों में पूरी तरह कार्यात्मक है, लेकिन नेत्रहीन रूप से आकर्षक नहीं हो सकती है। वेबसाइट देखने के लिए किसी अतिरिक्त प्लगइन्स या लाइब्रेरी की आवश्यकता नहीं हैं।
         </p>
         <p>
           Web Almanac पीडीएफ वेबसाइट के समान अभिगम्यता मानकों का पालन करता है और इसके अलावा, एक संरचनात्मक रूप से अभिगम्यता को सहायता के लिए टैग किया गया है।
@@ -106,7 +106,7 @@
         <h2 id="assessment-approach"><a href="#assessment-approach" class="anchor-link">मूल्यांकन का दृष्टिकोण</a></h2>
 
         <p>
-          स्व-मूल्यांकन: इस सामग्री का मूल्यांकन Web Almanac टीम ने अपनी विशेषज्ञता और <a href="https://wave.webaim.org/">वेव एक्सेसिबिलिटी टूल</a>, <a href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">फ़ायरफ़ॉक्स एक्सेसिबिलिटी इंस्पेक्टर</a> और <a href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">एएक्स क्रोम प्लगइन</a> सहित कई उपकरणों का उपयोग करके किया। वेब पंचांग पीडीएफ का परीक्षण एक्रोबेट रीडर प्रो डीसी में एक्सेसिबिलिटी स्कैन के साथ किया गया था।
+          स्व-मूल्यांकन: इस सामग्री का मूल्यांकन Web Almanac टीम ने अपनी विशेषज्ञता और <a hreflang="en" href="https://wave.webaim.org/">वेव एक्सेसिबिलिटी टूल</a>, <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">फ़ायरफ़ॉक्स एक्सेसिबिलिटी इंस्पेक्टर</a> और <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">एएक्स क्रोम प्लगइन</a> सहित कई उपकरणों का उपयोग करके किया। वेब पंचांग पीडीएफ का परीक्षण एक्रोबेट रीडर प्रो डीसी में एक्सेसिबिलिटी स्कैन के साथ किया गया था।
         </p>
       </section>
 
@@ -114,7 +114,7 @@
         <h2 id="feedback"><a href="#feedback" class="anchor-link">प्रतिक्रिया</a></h2>
 
         <p>
-          हम इस वेबसाइट की अभिगम्यता पर प्रतिक्रिया का स्वागत करते हैं। हमारे पास पहुंचने के सर्वोत्तम तरीका <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">GitHub पर एक समस्या को उठाना</a> या हमें <a href="mailto:team@httparchive.org">team@httparchive.org</a> पर ईमेल करना है। हम उन लोगों के लिए पुल अनुरोधों का भी स्वागत करेंगे जो सीधे योगदान करना चाहते हैं। Web Almanac एक समुदाय आधारित परियोजना है, जिसे स्वयंसेवकों द्वारा प्रबंधित किया जाता है, और इसलिए हम प्रतिक्रिया का जवाब देने के लिए समय सीमा की गारंटी नहीं दे सकते, लेकिन जितनी जल्दी हो सके जवाब देंगे।
+          हम इस वेबसाइट की अभिगम्यता पर प्रतिक्रिया का स्वागत करते हैं। हमारे पास पहुंचने के सर्वोत्तम तरीका <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">GitHub पर एक समस्या को उठाना</a> या हमें <a href="mailto:team@httparchive.org">team@httparchive.org</a> पर ईमेल करना है। हम उन लोगों के लिए पुल अनुरोधों का भी स्वागत करेंगे जो सीधे योगदान करना चाहते हैं। Web Almanac एक समुदाय आधारित परियोजना है, जिसे स्वयंसेवकों द्वारा प्रबंधित किया जाता है, और इसलिए हम प्रतिक्रिया का जवाब देने के लिए समय सीमा की गारंटी नहीं दे सकते, लेकिन जितनी जल्दी हो सके जवाब देंगे।
         </p>
       </section>
 {% endblock %}
