--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}{{ year }} संस्करण{% endmacro %}
 
 {% block footer_title %}फुटर नेविगेशन{% endblock %}
-{% block copyright %}© Web Almanac. <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a> के तहत लाइसेंस प्राप्त है।{% endblock %}
+{% block copyright %}© Web Almanac. <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a> के तहत लाइसेंस प्राप्त है।{% endblock %}
 {% block accessibility_statement %}अभिगम्यता विवरण{% endblock %}
 
 {% block featured_chapter %}विशेष अध्याय{% endblock %}
