--- a/src/templates/it/2020/base.html
+++ b/src/templates/it/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Goditi il Web Almanac 2020, il culmine del nostro lavoro d'amore per il web. E assicurati di <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md"> contattare </a> se desideri unirti al team.
+    Goditi il Web Almanac 2020, il culmine del nostro lavoro d'amore per il web. E assicurati di <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md"> contattare </a> se desideri unirti al team.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Web Almanac Editor-in-Chief</em></p>
