--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -94,7 +94,7 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% macro edition(year) %}Edizione {{ year }}{% endmacro %}
 
 {% block footer_title %}Navigazione nel footer di pagina{% endblock %}
-{% block copyright %}© Web Almanac. Concesso in licenza da <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Concesso in licenza da <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Dichiarazione di accessibilità{% endblock %}
 
 {% block featured_chapter %}Capitolo in primo piano{% endblock %}
