--- a/src/templates/ja/2019/methodology.html
+++ b/src/templates/ja/2019/methodology.html
@@ -51,7 +51,7 @@
         <h2 id="overview"><a href="#overview" class="anchor-link">概要</a></h2>
 
         <p>
-          Web Almanacは、<a href="https://httparchive.org">HTTP Archive</a>によって組織されたプロジェクトです。HTTP Archiveは、ウェブがどのように構築されているかを追跡することを使命として、2010年に Steve Souders によって開始されました。何百万ものウェブページの構成を毎月評価し、そのテラバイトのメタデータを<a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>で分析できるようにしています。詳細は<a href="https://httparchive.org/about">HTTP Archive</a>をご覧ください。
+          Web Almanacは、<a hreflang="en" href="https://httparchive.org">HTTP Archive</a>によって組織されたプロジェクトです。HTTP Archiveは、ウェブがどのように構築されているかを追跡することを使命として、2010年に Steve Souders によって開始されました。何百万ものウェブページの構成を毎月評価し、そのテラバイトのメタデータを<a hreflang="en" href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>で分析できるようにしています。詳細は<a hreflang="en" href="https://httparchive.org/about">HTTP Archive</a>をご覧ください。
         </p>
 
         <p>
@@ -67,19 +67,19 @@
         <h2 id="dataset"><a href="#dataset" class="anchor-link">データセットについて</a></h2>
 
         <p>
-          HTTP Archiveデータセットは、毎月新しいデータで継続的に更新されています。Web Almanacの2019年版については、この章で特に断りのない限り、すべてのメトリクスは2019年7月のクロールからソースを得ています。これらの結果は、BigQuery上で接頭語のテーブル<code>2019_07_01</code>で<a href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">公開</a>できます。
+          HTTP Archiveデータセットは、毎月新しいデータで継続的に更新されています。Web Almanacの2019年版については、この章で特に断りのない限り、すべてのメトリクスは2019年7月のクロールからソースを得ています。これらの結果は、BigQuery上で接頭語のテーブル<code>2019_07_01</code>で<a hreflang="en" href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">公開</a>できます。
         </p>
 
         <p>
-          Web Almanacで紹介されているすべてのメトリクスは、BigQuery上のデータセットを使用して一般に再現可能です。すべての章で使用されているクエリは、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">GitHubリポジトリ</a>で閲覧できます。
+          Web Almanacで紹介されているすべてのメトリクスは、BigQuery上のデータセットを使用して一般に再現可能です。すべての章で使用されているクエリは、<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">GitHubリポジトリ</a>で閲覧できます。
         </p>
 
         <p class="note">
-          BigQueryはテラバイト単位で課金されるため、これらのクエリの中には非常に大規模なものもあり、自分で実行するには<a href="https://cloud.google.com/bigquery/pricing">費用がかかる</a>可能性があることに注意してください。支出のコントロールについては、Tim Kadlec氏の投稿<a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">Using BigQuery Without Breaking the Bank</a>を参照してください。
+          BigQueryはテラバイト単位で課金されるため、これらのクエリの中には非常に大規模なものもあり、自分で実行するには<a hreflang="en" href="https://cloud.google.com/bigquery/pricing">費用がかかる</a>可能性があることに注意してください。支出のコントロールについては、Tim Kadlec氏の投稿<a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">Using BigQuery Without Breaking the Bank</a>を参照してください。
         </p>
 
         <p>
-          例えば、デスクトップページとモバイルページあたりのJavaScriptのバイト数の中央値を把握するには、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>を参照してください。
+          例えば、デスクトップページとモバイルページあたりのJavaScriptのバイト数の中央値を把握するには、<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>を参照してください。
         </p>
 
         <div class="code-block floating-card">
@@ -167,7 +167,7 @@
       <h3 id="webpagetest"><a href="#webpagetest" class="anchor-link">WebPageTest</a></h3>
 
       <p>
-        <a href="https://www.webpagetest.org/">WebPageTest</a>は、著名なウェブパフォーマンステストツールであり、HTTP Archiveのバックボーンです。WebPageTestは<a href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">プライベートインスタンス</a>とプライベートテストエージェントを使用しており、これは各Webページをテストする実際のブラウザです。デスクトップとモバイルのウェブサイトは、異なる構成でテストされます。
+        <a hreflang="en" href="https://www.webpagetest.org/">WebPageTest</a>は、著名なウェブパフォーマンステストツールであり、HTTP Archiveのバックボーンです。WebPageTestは<a hreflang="en" href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">プライベートインスタンス</a>とプライベートテストエージェントを使用しており、これは各Webページをテストする実際のブラウザです。デスクトップとモバイルのウェブサイトは、異なる構成でテストされます。
       </p>
       <div class="table-wrap"><div class="table-wrap-container">
       <table>
@@ -231,11 +231,11 @@
       </p>
 
       <p>
-        テストが実行される場所は2つあります。カリフォルニア州とオレゴン州です。HTTP Archiveは、カリフォルニア州にある<a href="https://archive.org">Internet Archive</a>のデータセンターにある独自のテストエージェントハードウェアを維持しています。オレゴン州にある<a href="https://cloud.google.com/compute/docs/regions-zones/#locations">Google Cloud Platform</a> のus-west-1にあるテストエージェントは、必要に応じて追加されています。
+        テストが実行される場所は2つあります。カリフォルニア州とオレゴン州です。HTTP Archiveは、カリフォルニア州にある<a hreflang="en" href="https://archive.org">Internet Archive</a>のデータセンターにある独自のテストエージェントハードウェアを維持しています。オレゴン州にある<a hreflang="en" href="https://cloud.google.com/compute/docs/regions-zones/#locations">Google Cloud Platform</a> のus-west-1にあるテストエージェントは、必要に応じて追加されています。
       </p>
 
       <p>
-        HTTP ArchiveのWebPageTestのプライベートインスタンスは、最新のパブリックバージョンと同期して維持され、<a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">カスタムメトリクス</a>で強化されています。これらは、テストの最後に各ウェブサイトで評価されるJavaScriptのスニペットです。<a href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">almanac.js</a>カスタムメトリクスには、DOMの状態に依存するメトリクスなど、そうでなければ計算できないいくつかのメトリクスが含まれています。
+        HTTP ArchiveのWebPageTestのプライベートインスタンスは、最新のパブリックバージョンと同期して維持され、<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">カスタムメトリクス</a>で強化されています。これらは、テストの最後に各ウェブサイトで評価されるJavaScriptのスニペットです。<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">almanac.js</a>カスタムメトリクスには、DOMの状態に依存するメトリクスなど、そうでなければ計算できないいくつかのメトリクスが含まれています。
       </p>
 
       <p>
@@ -247,11 +247,11 @@
       <h3 id="lighthouse"><a href="#lighthouse" class="anchor-link">Lighthouse</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a>は、Googleが構築した自動化されたウェブサイト品質保証ツールです。最適化されていない画像やアクセスできないコンテンツなどのユーザー体験のアンチパターンが含まれていないことを確認するためにウェブページを監査します。
+        <a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a>は、Googleが構築した自動化されたウェブサイト品質保証ツールです。最適化されていない画像やアクセスできないコンテンツなどのユーザー体験のアンチパターンが含まれていないことを確認するためにウェブページを監査します。
       </p>
 
       <p>
-        HTTP Archiveは、すべてのモバイルWebページでLighthouseの最新バージョンを実行しています - リソースが限られているため、デスクトップページは含まれていません。2019年7月のクロール時点で、HTTP Archiveは<a href="https://github.com/GoogleChrome/lighthouse/releases/tag/v5.1.0">5.1.0</a>バージョンのLighthouseを使用していました。
+        HTTP Archiveは、すべてのモバイルWebページでLighthouseの最新バージョンを実行しています - リソースが限られているため、デスクトップページは含まれていません。2019年7月のクロール時点で、HTTP Archiveは<a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v5.1.0">5.1.0</a>バージョンのLighthouseを使用していました。
       </p>
 
       <p>
@@ -287,11 +287,11 @@
       </div></div>
 
       <p class="note">
-        * 注 Lighthouseは通常、CPUが4倍遅くなるように設定されていますが、WebPageTestの<a href="https://github.com/GoogleChrome/lighthouse/issues/9668#issuecomment-535134232">バグ</a>のため、テスト時には1倍になっていました。
+        * 注 Lighthouseは通常、CPUが4倍遅くなるように設定されていますが、WebPageTestの<a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/issues/9668#issuecomment-535134232">バグ</a>のため、テスト時には1倍になっていました。
       </p>
 
       <p>
-        LighthouseとHTTP Archiveで利用可能な監査の詳細については、<a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse開発者向けドキュメント</a>を参照してください。
+        LighthouseとHTTP Archiveで利用可能な監査の詳細については、<a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse開発者向けドキュメント</a>を参照してください。
       </p>
     </section>
 
@@ -299,15 +299,15 @@
       <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
-        <a href="https://www.wappalyzer.com/">Wappalyzer</a>は、ウェブページで使用されている技術を検出するためのツールです。<a href="https://www.wappalyzer.com/technologies">65のカテゴリ</a>があり、JavaScriptフレームワークからCMSプラットフォーム、さらには暗号通貨の採掘者に至るまで、テストされた技術の範囲があります。1,200以上の技術がサポートされています。
+        <a hreflang="en" href="https://www.wappalyzer.com/">Wappalyzer</a>は、ウェブページで使用されている技術を検出するためのツールです。<a hreflang="en" href="https://www.wappalyzer.com/technologies">65のカテゴリ</a>があり、JavaScriptフレームワークからCMSプラットフォーム、さらには暗号通貨の採掘者に至るまで、テストされた技術の範囲があります。1,200以上の技術がサポートされています。
       </p>
 
       <p>
-        HTTP Archiveは、すべてのウェブページに対して最新バージョンのWappalyzerを実行します。2019年7月現在、Web AlmanacはWappalyzerの<a href="https://github.com/AliasIO/Wappalyzer/releases/tag/v5.8.3">5.8.3バージョン</a>を使用しています。
+        HTTP Archiveは、すべてのウェブページに対して最新バージョンのWappalyzerを実行します。2019年7月現在、Web AlmanacはWappalyzerの<a hreflang="en" href="https://github.com/AliasIO/Wappalyzer/releases/tag/v5.8.3">5.8.3バージョン</a>を使用しています。
       </p>
 
       <p>
-        Wappalyzerは、WordPress、Bootstrap、jQueryのような開発者ツールの人気を分析する多くの章を強力にしています。例えば、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">Eコマース</a> と <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> の各章は、それぞれの <a href="https://www.wappalyzer.com/categories/ecommerce">Eコマース</a> と <a href="https://www.wappalyzer.com/categories/cms">CMS</a> の各チャプターは、Wappalyzer が検出した技術のカテゴリに大きく依存しています。
+        Wappalyzerは、WordPress、Bootstrap、jQueryのような開発者ツールの人気を分析する多くの章を強力にしています。例えば、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">Eコマース</a> と <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> の各章は、それぞれの <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">Eコマース</a> と <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> の各チャプターは、Wappalyzer が検出した技術のカテゴリに大きく依存しています。
       </p>
 
       <p>
@@ -319,7 +319,7 @@
       <h3 id="chrome-ux-report"><a href="#chrome-ux-report" class="anchor-link">Chrome UXレポート</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UXレポート</a> は、実際のChromeユーザーの体験をまとめた公開データセットです。エクスペリエンスは、<code>https://www.example.com</code> などのように、ウェブサイトの起源によってグループ化されています。このデータセットには、ペイント、ロード、インタラクション、レイアウトの安定性などのUXメトリクスの分布が含まれています。月ごとのグループ化に加えて、国レベルの地理、フォームファクター（デスクトップ、モバイル、タブレット）、有効な接続タイプ（4G、3Gなど）などの大きさ、速度によっても経験をスライスすることができます。
+        <a hreflang="en" href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UXレポート</a> は、実際のChromeユーザーの体験をまとめた公開データセットです。エクスペリエンスは、<code>https://www.example.com</code> などのように、ウェブサイトの起源によってグループ化されています。このデータセットには、ペイント、ロード、インタラクション、レイアウトの安定性などのUXメトリクスの分布が含まれています。月ごとのグループ化に加えて、国レベルの地理、フォームファクター（デスクトップ、モバイル、タブレット）、有効な接続タイプ（4G、3Gなど）などの大きさ、速度によっても経験をスライスすることができます。
       </p>
 
       <p>
@@ -327,7 +327,7 @@
       </p>
 
       <p>
-        データセットの詳細については、<a href="https://web.dev/chrome-ux-report-bigquery">BigQueryでChrome UXレポートを使用する</a>のガイド<a href="https://web.dev/">web.dev</a>を参照してください。
+        データセットの詳細については、<a hreflang="en" href="https://web.dev/chrome-ux-report-bigquery">BigQueryでChrome UXレポートを使用する</a>のガイド<a hreflang="en" href="https://web.dev/">web.dev</a>を参照してください。
       </p>
     </section>
 
@@ -335,7 +335,7 @@
       <h3 id="third-party-web"><a href="#third-party-web">サードパーティウェブ</a></h3>
 
       <p>
-        <a href="https://www.thirdpartyweb.today/">サードパーティウェブ</a>は、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>の研究プロジェクトで、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">サードパーティ</a>の章では、HTTP ArchiveとLighthouseのデータを使用して、サードパーティのリソースがウェブに与える影響を特定して分析しています。
+        <a hreflang="en" href="https://www.thirdpartyweb.today/">サードパーティウェブ</a>は、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>の研究プロジェクトで、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">サードパーティ</a>の章では、HTTP ArchiveとLighthouseのデータを使用して、サードパーティのリソースがウェブに与える影響を特定して分析しています。
       </p>
 
       <p>
@@ -351,11 +351,11 @@
       <h3 id="rework-css"><a href="#rework-css" class="anchor-link">Rework CSS</a></h3>
 
       <p>
-        <a href="https://github.com/reworkcss/css">Rework CSS</a>はJavaScriptベースのCSSパーサーです。スタイルシート全体を受け取り、個々のスタイルルール、セレクタ、ディレクティブ、値を区別するJSONエンコードされたオブジェクトを生成します。
+        <a hreflang="en" href="https://github.com/reworkcss/css">Rework CSS</a>はJavaScriptベースのCSSパーサーです。スタイルシート全体を受け取り、個々のスタイルルール、セレクタ、ディレクティブ、値を区別するJSONエンコードされたオブジェクトを生成します。
       </p>
 
       <p>
-        この特別な目的のツールは、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>章の多くのメトリクスの精度を大幅に向上させました。各ページのすべての外部スタイルシートとインラインスタイルブロックのCSSを解析し、解析可能な状態にするために問い合わせを行いました。BigQueryのHTTP Archiveデータセットとの統合方法については、<a href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">このスレッド</a>を参照してください。
+        この特別な目的のツールは、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>章の多くのメトリクスの精度を大幅に向上させました。各ページのすべての外部スタイルシートとインラインスタイルブロックのCSSを解析し、解析可能な状態にするために問い合わせを行いました。BigQueryのHTTP Archiveデータセットとの統合方法については、<a hreflang="en" href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">このスレッド</a>を参照してください。
       </p>
     </section>
 
@@ -371,11 +371,11 @@
       <h3 id="brainstorming"><a href="#brainstorming" class="anchor-link">ブレインストーミング</a></h3>
 
       <p>
-        Web Almanacの発端は、2019年1月に<a href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">HTTP Archiveフォーラムへの投稿</a>でイニシアチブを説明し、支援を集めることから始まりました。2019年3月には、Webコミュニティの誰もがチャプターやメトリクスのアイデアを書き込むことができる<a href="http://bit.ly/web-almanac-brainstorm">公開ブレインストーミング文書</a>を作成しました。これは、私たちがコミュニティにとって重要なことに焦点を当て、プロセスに含まれる多様な声のセットを持っていることを確認するための重要なステップでした。
+        Web Almanacの発端は、2019年1月に<a hreflang="en" href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">HTTP Archiveフォーラムへの投稿</a>でイニシアチブを説明し、支援を集めることから始まりました。2019年3月には、Webコミュニティの誰もがチャプターやメトリクスのアイデアを書き込むことができる<a href="http://bit.ly/web-almanac-brainstorm">公開ブレインストーミング文書</a>を作成しました。これは、私たちがコミュニティにとって重要なことに焦点を当て、プロセスに含まれる多様な声のセットを持っていることを確認するための重要なステップでした。
       </p>
 
       <p>
-        ブレーンストーミングの結果、20の章が固まり、私たちは<a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/2">各章に主題専門家とレビュワーを割り当てる作業を開始しました</a>。このプロセスには、この規模のプロジェクトにボランティアを参加させるという課題があったため、いくつかの固有の偏りがありました。したがって、寄稿者の多くは同じ専門家サークルのメンバーです。Web Almanacの今後のエディションの明確な目標の1つは、著者やレビュワーとしての、代表性の低い、異質な声をより多く取り入れることを奨励することです。
+        ブレーンストーミングの結果、20の章が固まり、私たちは<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/2">各章に主題専門家とレビュワーを割り当てる作業を開始しました</a>。このプロセスには、この規模のプロジェクトにボランティアを参加させるという課題があったため、いくつかの固有の偏りがありました。したがって、寄稿者の多くは同じ専門家サークルのメンバーです。Web Almanacの今後のエディションの明確な目標の1つは、著者やレビュワーとしての、代表性の低い、異質な声をより多く取り入れることを奨励することです。
       </p>
 
       <p>
@@ -387,7 +387,7 @@
       <h3 id="analysis"><a href="#analysis" class="anchor-link">分析</a></h3>
 
       <p>
-        2019年6月、メトリクスと章の安定したリストで、データアナリストは実現可能性のためにメトリクスをトリアージしました。場合によっては、<a href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">カスタムメトリクス</a>を作成して分析能力のギャップを埋める必要がありました。
+        2019年6月、メトリクスと章の安定したリストで、データアナリストは実現可能性のためにメトリクスをトリアージしました。場合によっては、<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">カスタムメトリクス</a>を作成して分析能力のギャップを埋める必要がありました。
       </p>
 
       <p>
@@ -395,7 +395,7 @@
       </p>
 
       <p>
-        2019年8月から、データアナリストが各メトリクスの結果を抽出するためのクエリを書き始めました。合計で、<strong>431個のクエリ</strong>が手書きで書かれました! プロジェクトのGitHubリポジトリの<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a>ディレクトリで、章別にすべてのクエリを閲覧することができます。
+        2019年8月から、データアナリストが各メトリクスの結果を抽出するためのクエリを書き始めました。合計で、<strong>431個のクエリ</strong>が手書きで書かれました! プロジェクトのGitHubリポジトリの<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a>ディレクトリで、章別にすべてのクエリを閲覧することができます。
       </p>
     </section>
 
@@ -423,7 +423,7 @@
       </p>
 
       <p>
-        Web Almanacの2020年版への貢献にご興味のある方は、<a href="https://forms.gle/Qyf3q5pKgdH1cBhq5">関心フォーム</a>にご記入ください。このプロジェクトをより良いものにするためのアイデアをお待ちしています！
+        Web Almanacの2020年版への貢献にご興味のある方は、<a hreflang="en" href="https://forms.gle/Qyf3q5pKgdH1cBhq5">関心フォーム</a>にご記入ください。このプロジェクトをより良いものにするためのアイデアをお待ちしています！
       </p>
     </section>
 {% endblock main_content %}
