--- a/src/templates/ja/2020/methodology.html
+++ b/src/templates/ja/2020/methodology.html
@@ -56,7 +56,7 @@
         <h2 id="overview"><a href="#overview" class="anchor-link">概要</a></h2>
 
         <p>
-          Web Almanacは、<a href="https://httparchive.org">HTTP Archive</a>によって組織されたプロジェクトです。HTTP Archiveは、ウェブがどのように構築されているかを追跡することを使命として、2010年に Steve Souders によって開始されました。何百万ものウェブページの構成を毎月評価し、そのテラバイトのメタデータを<a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>で分析できるようにしています。
+          Web Almanacは、<a hreflang="en" href="https://httparchive.org">HTTP Archive</a>によって組織されたプロジェクトです。HTTP Archiveは、ウェブがどのように構築されているかを追跡することを使命として、2010年に Steve Souders によって開始されました。何百万ものウェブページの構成を毎月評価し、そのテラバイトのメタデータを<a hreflang="en" href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>で分析できるようにしています。
         </p>
 
         <p>
@@ -72,19 +72,19 @@
         <h2 id="dataset"><a href="#dataset" class="anchor-link">データセットについて</a></h2>
 
         <p>
-          HTTP Archiveデータセットは、毎月新しいデータで継続的に更新されています。Web Almanacの2020年版については、この章で特に断りのない限り、すべてのメトリクスは2020年8月のクロールからソースを得ています。これらの結果は、BigQuery上で接頭語のテーブル<code>2020_08_01</code>で<a href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">公開</a>できます。
+          HTTP Archiveデータセットは、毎月新しいデータで継続的に更新されています。Web Almanacの2020年版については、この章で特に断りのない限り、すべてのメトリクスは2020年8月のクロールからソースを得ています。これらの結果は、BigQuery上で接頭語のテーブル<code>2020_08_01</code>で<a hreflang="en" href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">公開</a>できます。
         </p>
 
         <p>
-          Web Almanacで紹介されているすべてのメトリクスは、BigQuery上のデータセットを使用して一般に再現可能です。すべての章で使用されているクエリは、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">GitHubリポジトリ</a>で閲覧できます。
+          Web Almanacで紹介されているすべてのメトリクスは、BigQuery上のデータセットを使用して一般に再現可能です。すべての章で使用されているクエリは、<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">GitHubリポジトリ</a>で閲覧できます。
         </p>
 
         <p class="note">
-          BigQueryはテラバイト単位で課金されるため、これらのクエリの中には非常に大規模なものもあり、自分で実行するには<a href="https://cloud.google.com/bigquery/pricing">費用がかかる</a>可能性があることに注意してください。支出のコントロールについては、Tim Kadlec氏の投稿<a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">Using BigQuery Without Breaking the Bank</a>を参照してください。
+          BigQueryはテラバイト単位で課金されるため、これらのクエリの中には非常に大規模なものもあり、自分で実行するには<a hreflang="en" href="https://cloud.google.com/bigquery/pricing">費用がかかる</a>可能性があることに注意してください。支出のコントロールについては、Tim Kadlec氏の投稿<a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">Using BigQuery Without Breaking the Bank</a>を参照してください。
         </p>
 
         <p>
-          例えば、デスクトップページとモバイルページあたりのJavaScriptのバイト数の中央値を把握するには、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>を参照してください。
+          例えば、デスクトップページとモバイルページあたりのJavaScriptのバイト数の中央値を把握するには、<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>を参照してください。
         </p>
 
         <div class="code-block floating-card">
@@ -128,7 +128,7 @@
         </p>
 
         <p>
-          分析したウェブサイトの数は、<a href="../2019/methodology#websites">2019 Web Almanac</a>に掲載されているウェブサイトと比較して、20～30%の増加が見られました。この増加は、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='paulcalvano')}}">Paul Calvano</a>が、<a href="https://paulcalvano.com/2020-09-29-growth-of-the-web-in-2020/">Growth of the Web in 2020</a>の投稿で分析しています。
+          分析したウェブサイトの数は、<a href="../2019/methodology#websites">2019 Web Almanac</a>に掲載されているウェブサイトと比較して、20～30%の増加が見られました。この増加は、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='paulcalvano')}}">Paul Calvano</a>が、<a hreflang="en" href="https://paulcalvano.com/2020-09-29-growth-of-the-web-in-2020/">Growth of the Web in 2020</a>の投稿で分析しています。
         </p>
 
         <p>
@@ -176,7 +176,7 @@
       <h3 id="webpagetest"><a href="#webpagetest" class="anchor-link">WebPageTest</a></h3>
 
       <p>
-        <a href="https://www.webpagetest.org/">WebPageTest</a>は、著名なウェブパフォーマンステストツールであり、HTTP Archiveのバックボーンです。WebPageTestは<a href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">プライベートインスタンス</a>とプライベートテストエージェントを使用しており、これは各Webページをテストする実際のブラウザです。デスクトップとモバイルのウェブサイトは、異なる構成でテストされます。
+        <a hreflang="en" href="https://www.webpagetest.org/">WebPageTest</a>は、著名なウェブパフォーマンステストツールであり、HTTP Archiveのバックボーンです。WebPageTestは<a hreflang="en" href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">プライベートインスタンス</a>とプライベートテストエージェントを使用しており、これは各Webページをテストする実際のブラウザです。デスクトップとモバイルのウェブサイトは、異なる構成でテストされます。
       </p>
       <div class="table-wrap"><div class="table-wrap-container">
       <table>
@@ -240,11 +240,11 @@
       </p>
 
       <p>
-        テストが実行される場所は2つあります。カリフォルニア州とオレゴン州です。HTTP Archiveは、カリフォルニア州にある<a href="https://archive.org">Internet Archive</a>のデータセンターにある独自のテストエージェントハードウェアを維持しています。オレゴン州にある<a href="https://cloud.google.com/compute/docs/regions-zones/#locations">Google Cloud Platform</a> のus-west-1にあるテストエージェントは、必要に応じて追加されています。
+        テストが実行される場所は2つあります。カリフォルニア州とオレゴン州です。HTTP Archiveは、カリフォルニア州にある<a hreflang="en" href="https://archive.org">Internet Archive</a>のデータセンターにある独自のテストエージェントハードウェアを維持しています。オレゴン州にある<a hreflang="en" href="https://cloud.google.com/compute/docs/regions-zones/#locations">Google Cloud Platform</a> のus-west-1にあるテストエージェントは、必要に応じて追加されています。
       </p>
 
       <p>
-        HTTP ArchiveのWebPageTestのプライベートインスタンスは、最新のパブリックバージョンと同期して維持され、<a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">カスタムメトリクス</a>で強化されています。これらは、テストの最後に各ウェブサイトで評価されるJavaScriptのスニペットです。多くのデータアナリストの<a href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">貢献</a>に感謝します、特に<a href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">献身的な努力</a>をした<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='Tiggerito')}}">Tony McCreathのおかげで</a>、Web Almanacの2020年版では、HTTPアーカイブのテストインフラストラクチャの機能が3,000行以上の新しいコードで大幅に拡張されました。
+        HTTP ArchiveのWebPageTestのプライベートインスタンスは、最新のパブリックバージョンと同期して維持され、<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">カスタムメトリクス</a>で強化されています。これらは、テストの最後に各ウェブサイトで評価されるJavaScriptのスニペットです。多くのデータアナリストの<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">貢献</a>に感謝します、特に<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">献身的な努力</a>をした<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='Tiggerito')}}">Tony McCreathのおかげで</a>、Web Almanacの2020年版では、HTTPアーカイブのテストインフラストラクチャの機能が3,000行以上の新しいコードで大幅に拡張されました。
       </p>
 
       <p>
@@ -256,11 +256,11 @@
       <h3 id="lighthouse"><a href="#lighthouse" class="anchor-link">Lighthouse</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a>は、Googleが構築した自動化されたウェブサイト品質保証ツールです。最適化されていない画像やアクセスできないコンテンツなどのユーザー体験のアンチパターンが含まれていないことを確認するためにウェブページを監査します。
+        <a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a>は、Googleが構築した自動化されたウェブサイト品質保証ツールです。最適化されていない画像やアクセスできないコンテンツなどのユーザー体験のアンチパターンが含まれていないことを確認するためにウェブページを監査します。
       </p>
 
       <p>
-        HTTP Archiveは、すべてのモバイルWebページでLighthouseの最新バージョンを実行しています - リソースが限られているため、デスクトップページは含まれていません。2020年8月のクロール時点で、HTTP Archiveは<a href="https://github.com/GoogleChrome/lighthouse/releases/tag/v6.2.0">6.2.0</a>バージョンのLighthouseを使用していました。
+        HTTP Archiveは、すべてのモバイルWebページでLighthouseの最新バージョンを実行しています - リソースが限られているため、デスクトップページは含まれていません。2020年8月のクロール時点で、HTTP Archiveは<a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v6.2.0">6.2.0</a>バージョンのLighthouseを使用していました。
       </p>
 
       <p>
@@ -296,7 +296,7 @@
       </div></div>
 
       <p>
-        LighthouseとHTTP Archiveで利用可能な監査の詳細については、<a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse開発者向けドキュメント</a>を参照してください。
+        LighthouseとHTTP Archiveで利用可能な監査の詳細については、<a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse開発者向けドキュメント</a>を参照してください。
       </p>
     </section>
 
@@ -304,15 +304,15 @@
       <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
-        <a href="https://www.wappalyzer.com/">Wappalyzer</a>は、ウェブページで使用されている技術を検出するためのツールです。<a href="https://www.wappalyzer.com/technologies">64のカテゴリ</a>があり、JavaScriptフレームワークからCMSプラットフォーム、さらには暗号通貨の採掘者に至るまで、テストされた技術の範囲があります。1,400以上の技術がサポートされています。
+        <a hreflang="en" href="https://www.wappalyzer.com/">Wappalyzer</a>は、ウェブページで使用されている技術を検出するためのツールです。<a hreflang="en" href="https://www.wappalyzer.com/technologies">64のカテゴリ</a>があり、JavaScriptフレームワークからCMSプラットフォーム、さらには暗号通貨の採掘者に至るまで、テストされた技術の範囲があります。1,400以上の技術がサポートされています。
       </p>
 
       <p>
-        HTTP Archiveは、すべてのウェブページに対して最新バージョンのWappalyzerを実行します。2020年8月現在、Web AlmanacはWappalyzerの<a href="https://github.com/AliasIO/Wappalyzer/releases/tag/v6.2.0">6.2.0バージョン</a>を使用しています。
+        HTTP Archiveは、すべてのウェブページに対して最新バージョンのWappalyzerを実行します。2020年8月現在、Web AlmanacはWappalyzerの<a hreflang="en" href="https://github.com/AliasIO/Wappalyzer/releases/tag/v6.2.0">6.2.0バージョン</a>を使用しています。
       </p>
 
       <p>
-        Wappalyzerは、WordPress、Bootstrap、jQueryのような開発者ツールの人気を分析する多くの章を強力にしています。例えば、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">Eコマース</a> と <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> の各章は、それぞれの <a href="https://www.wappalyzer.com/categories/ecommerce">Eコマース</a> と <a href="https://www.wappalyzer.com/categories/cms">CMS</a> の各チャプターは、Wappalyzer が検出した技術のカテゴリに大きく依存しています。
+        Wappalyzerは、WordPress、Bootstrap、jQueryのような開発者ツールの人気を分析する多くの章を強力にしています。例えば、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">Eコマース</a> と <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> の各章は、それぞれの <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">Eコマース</a> と <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> の各チャプターは、Wappalyzer が検出した技術のカテゴリに大きく依存しています。
       </p>
 
       <p>
@@ -324,7 +324,7 @@
       <h3 id="chrome-ux-report"><a href="#chrome-ux-report" class="anchor-link">Chrome UXレポート</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UXレポート</a> は、実際のChromeユーザーの体験をまとめた公開データセットです。エクスペリエンスは、<code>https://www.example.com</code> などのように、ウェブサイトの起源によってグループ化されています。このデータセットには、ペイント、ロード、インタラクション、レイアウトの安定性などのUXメトリクスの分布が含まれています。月ごとのグループ化に加えて、国レベルの地理、フォームファクター（デスクトップ、モバイル、タブレット）、有効な接続タイプ（4G、3Gなど）などの大きさ、速度によっても経験をスライスすることができます。
+        <a hreflang="en" href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UXレポート</a> は、実際のChromeユーザーの体験をまとめた公開データセットです。エクスペリエンスは、<code>https://www.example.com</code> などのように、ウェブサイトの起源によってグループ化されています。このデータセットには、ペイント、ロード、インタラクション、レイアウトの安定性などのUXメトリクスの分布が含まれています。月ごとのグループ化に加えて、国レベルの地理、フォームファクター（デスクトップ、モバイル、タブレット）、有効な接続タイプ（4G、3Gなど）などの大きさ、速度によっても経験をスライスすることができます。
       </p>
 
       <p>
@@ -332,7 +332,7 @@
       </p>
 
       <p>
-        データセットの詳細については、<a href="https://web.dev/chrome-ux-report-bigquery">BigQueryでChrome UXレポートを使用する</a>のガイド<a href="https://web.dev/">web.dev</a>を参照してください。
+        データセットの詳細については、<a hreflang="en" href="https://web.dev/chrome-ux-report-bigquery">BigQueryでChrome UXレポートを使用する</a>のガイド<a hreflang="en" href="https://web.dev/">web.dev</a>を参照してください。
       </p>
     </section>
 
@@ -340,7 +340,7 @@
       <h3 id="third-party-web" class="anchor-link"><a href="#third-party-web">サードパーティウェブ</a></h3>
 
       <p>
-        <a href="https://www.thirdpartyweb.today/">サードパーティウェブ</a>は、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>の研究プロジェクトで、<a href="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">2019サードパーティ</a>の章では、HTTP ArchiveとLighthouseのデータを使用して、サードパーティのリソースがウェブに与える影響を特定して分析しています。
+        <a hreflang="en" href="https://www.thirdpartyweb.today/">サードパーティウェブ</a>は、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>の研究プロジェクトで、<a href="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">2019サードパーティ</a>の章では、HTTP ArchiveとLighthouseのデータを使用して、サードパーティのリソースがウェブに与える影響を特定して分析しています。
       </p>
 
       <p>
@@ -356,11 +356,11 @@
       <h3 id="rework-css"><a href="#rework-css" class="anchor-link">Rework CSS</a></h3>
 
       <p>
-        <a href="https://github.com/reworkcss/css">Rework CSS</a>はJavaScriptベースのCSSパーサーです。スタイルシート全体を受け取り、個々のスタイルルール、セレクタ、ディレクティブ、値を区別するJSONエンコードされたオブジェクトを生成します。
+        <a hreflang="en" href="https://github.com/reworkcss/css">Rework CSS</a>はJavaScriptベースのCSSパーサーです。スタイルシート全体を受け取り、個々のスタイルルール、セレクタ、ディレクティブ、値を区別するJSONエンコードされたオブジェクトを生成します。
       </p>
 
       <p>
-        この特別な目的のツールは、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>章の多くのメトリクスの精度を大幅に向上させました。各ページのすべての外部スタイルシートとインラインスタイルブロックのCSSを解析し、解析可能な状態にするために問い合わせを行いました。BigQueryのHTTP Archiveデータセットとの統合方法については、<a href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">このスレッド</a>を参照してください。
+        この特別な目的のツールは、<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>章の多くのメトリクスの精度を大幅に向上させました。各ページのすべての外部スタイルシートとインラインスタイルブロックのCSSを解析し、解析可能な状態にするために問い合わせを行いました。BigQueryのHTTP Archiveデータセットとの統合方法については、<a hreflang="en" href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">このスレッド</a>を参照してください。
       </p>
     </section>
 
@@ -368,7 +368,7 @@
       <h4 id="rework-utils"><a href="#rework-utils" class="anchor-link">Rework Utils</a></h4>
 
       <p>
-        今年の<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>の章では、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a>がCSSの状態をかなり詳細に見ており、<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020/css">100以上のクエリ</a>にわたっています。視点を変えれば、2019年の2.5倍のクエリ数になります。この規模の分析を実現可能にするために、Leaは<a href="https://github.com/LeaVerou/rework-utils">Rework Utils</a>をオープンソース化しました。これらのユーティリティは、CSSの洞察をより簡単に抽出するための有用なスクリプトを提供することで、ReworkからJSONデータを次のレベルに引き上げます。CSSの章で見る統計情報のほとんどは、これらのスクリプトによって提供されています。
+        今年の<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>の章では、<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a>がCSSの状態をかなり詳細に見ており、<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020/css">100以上のクエリ</a>にわたっています。視点を変えれば、2019年の2.5倍のクエリ数になります。この規模の分析を実現可能にするために、Leaは<a hreflang="en" href="https://github.com/LeaVerou/rework-utils">Rework Utils</a>をオープンソース化しました。これらのユーティリティは、CSSの洞察をより簡単に抽出するための有用なスクリプトを提供することで、ReworkからJSONデータを次のレベルに引き上げます。CSSの章で見る統計情報のほとんどは、これらのスクリプトによって提供されています。
       </p>
     </section>
 
@@ -376,7 +376,7 @@
         <h4 id="parsel"><a href="#parsel" class="anchor-link">Parsel</a></h4>
 
         <p>
-            <a href="https://projects.verou.me/parsel/">Parsel</a>はCSSセレクターの構文解析と詳細度の計算ツールで、元々は<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>の章をリードする<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a>によって書かれたものであり、個別のライブラリとしてオープンソース化されています。これは、セレクターと詳細度に関連するすべてのCSSの分析で広く使われています。
+            <a hreflang="en" href="https://projects.verou.me/parsel/">Parsel</a>はCSSセレクターの構文解析と詳細度の計算ツールで、元々は<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a>の章をリードする<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a>によって書かれたものであり、個別のライブラリとしてオープンソース化されています。これは、セレクターと詳細度に関連するすべてのCSSの分析で広く使われています。
         </p>
     </section>
 
@@ -396,7 +396,7 @@
       </p>
 
       <p>
-        昨年の方法論で<a href="https://almanac.httparchive.org/en/2019/methodology#brainstorming">述べたように、</a>。
+        昨年の方法論で<a href="../2019/methodology#brainstorming">述べたように、</a>。
       </p>
 
       <blockquote>
@@ -435,7 +435,7 @@
       <h3 id="analysis"><a href="#analysis" class="anchor-link">分析</a></h3>
 
       <p>
-        2020年7月と8月に、メトリクスとチャプターの安定したリストを持って、データアナリストは、実現可能性のためにメトリクスをトリアージしました。場合によっては、分析能力のギャップを埋めるために、<a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">カスタムメトリクス</a>を作成されました。
+        2020年7月と8月に、メトリクスとチャプターの安定したリストを持って、データアナリストは、実現可能性のためにメトリクスをトリアージしました。場合によっては、分析能力のギャップを埋めるために、<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">カスタムメトリクス</a>を作成されました。
       </p>
 
       <p>
@@ -443,7 +443,7 @@
       </p>
 
       <p>
-        データアナリストは、各メトリクスの結果を抽出するためのクエリを書き始めました。合計すると、何百ものクエリが手書きで書かれていました。GitHubのオープンソース<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">クエリのリポジトリ</a> で、年別、章別にすべてのクエリを閲覧することができます。
+        データアナリストは、各メトリクスの結果を抽出するためのクエリを書き始めました。合計すると、何百ものクエリが手書きで書かれていました。GitHubのオープンソース<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">クエリのリポジトリ</a> で、年別、章別にすべてのクエリを閲覧することができます。
       </p>
     </section>
 
@@ -471,7 +471,7 @@
       </p>
 
       <p>
-        Web Almanacの2021年版への貢献にご興味のある方は、<a href="https://forms.gle/VRBFegGAP7d99Bhp7">関心フォーム</a>にご記入ください。みんなで協力してウェブの状態を追いかけていきましょう！
+        Web Almanacの2021年版への貢献にご興味のある方は、<a hreflang="en" href="https://forms.gle/VRBFegGAP7d99Bhp7">関心フォーム</a>にご記入ください。みんなで協力してウェブの状態を追いかけていきましょう！
       </p>
     </section>
 {% endblock main_content %}
