--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -93,7 +93,7 @@
 {% macro edition(year) %}{{ year }} 版{% endmacro %}
 
 {% block footer_title %}フッターナビゲーション{% endblock %}
-{% block copyright %}© Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Licensed under <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}アクセシビリティに関する声明{% endblock %}
 
 {% block featured_chapter %}注目の章{% endblock %}
