--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}{{ year }} Editie{% endmacro %}
 
 {% block footer_title %}Voettekst navigatie{% endblock %}
-{% block copyright %}© Web Almanac. Gelicentieerd onder <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Gelicentieerd onder <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Toegankelijkheidsverklaring{% endblock %}
 
 {% block featured_chapter %}Uitgelicht Hoofdstuk{% endblock %}
