--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}Издание от {{ year }} года{% endmacro %}
 
 {% block footer_title %}Навигация по футеру{% endblock %}
-{% block copyright %}© Web Almanac. Распространяется по лицензии <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Распространяется по лицензии <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Информация о доступности{% endblock %}
 
 {% block featured_chapter %}Лучшая глава{% endblock %}
