--- a/src/templates/uk/2020/base.html
+++ b/src/templates/uk/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Насолоджуйтесь Web Almanac 2020, кульмінацією нашої праці у любові до вебу. І обов’язково <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">приєднуйтеся</a> до нашої команди.
+    Насолоджуйтесь Web Almanac 2020, кульмінацією нашої праці у любові до вебу. І обов’язково <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">приєднуйтеся</a> до нашої команди.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, головний редактор Web Almanac</em></p>
