--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}Видання {{ year }} року{% endmacro %}
 
 {% block footer_title %}Підвальна навігація{% endblock %}
-{% block copyright %}© Web Almanac. Ліцензія <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. Ліцензія <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}Заява про доступність{% endblock %}
 
 {% block featured_chapter %}Рекомендований розділ{% endblock %}
