--- a/src/templates/zh-CN/2019/methodology.html
+++ b/src/templates/zh-CN/2019/methodology.html
@@ -51,7 +51,7 @@
         <h2 id="overview"><a href="#overview" class="anchor-link">概览</a></h2>
 
         <p>
-          Web Almanac 是一个由 <a href="https://httparchive.org">HTTP Archive</a>组织的项目. HTTP Archive 于2010年由Steve Souders创立，其任务是跟踪web是如何构建的。它按月评估数以百万计的网页，并使它的TB级别的元数据可供<a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>分析。了解更多 <a href="https://httparchive.org/about">HTTP Archive</a>。
+          Web Almanac 是一个由 <a hreflang="en" href="https://httparchive.org">HTTP Archive</a>组织的项目. HTTP Archive 于2010年由Steve Souders创立，其任务是跟踪web是如何构建的。它按月评估数以百万计的网页，并使它的TB级别的元数据可供<a hreflang="en" href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>分析。了解更多 <a hreflang="en" href="https://httparchive.org/about">HTTP Archive</a>。
         </p>
 
         <p>
@@ -67,19 +67,19 @@
         <h2 id="dataset"><a href="#dataset" class="anchor-link">关于数据集</a></h2>
 
         <p>
-          HTTP Archive 数据集每月持续更新新的数据。对于2019年版的Web Almanac，除非本章另有说明，否则所有的指标都来自于2019年7月的抓取。这些结果<a href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">可以用 <code>2019_07_01</code>为前缀在BigQuery公开的查询</a>
+          HTTP Archive 数据集每月持续更新新的数据。对于2019年版的Web Almanac，除非本章另有说明，否则所有的指标都来自于2019年7月的抓取。这些结果<a hreflang="en" href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">可以用 <code>2019_07_01</code>为前缀在BigQuery公开的查询</a>
         </p>
 
         <p>
-          Web Almanac中列出的所有指标都可以通过BigQuery上的数据集公开重现。您可以在我们的<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">GitHub 仓库</a>浏览我们的所有章节使用的查询。
+          Web Almanac中列出的所有指标都可以通过BigQuery上的数据集公开重现。您可以在我们的<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">GitHub 仓库</a>浏览我们的所有章节使用的查询。
         </p>
 
         <p class="note">
-          请注意，其中一些查询相当大，如果你自己运行可能比较 <a href="https://cloud.google.com/bigquery/pricing">昂贵</a> ，因为BigQuery是按TB收费。为了帮助控制你的开支，请看 Tim Kadlec的文章 <a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">在不破产的情况下来使用BigQuery</a>。
+          请注意，其中一些查询相当大，如果你自己运行可能比较 <a hreflang="en" href="https://cloud.google.com/bigquery/pricing">昂贵</a> ，因为BigQuery是按TB收费。为了帮助控制你的开支，请看 Tim Kadlec的文章 <a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">在不破产的情况下来使用BigQuery</a>。
         </p>
 
         <p>
-          例如，要了解每个桌面和移动页面的JavaScript字节数的中位数，请参阅 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>:
+          例如，要了解每个桌面和移动页面的JavaScript字节数的中位数，请参阅 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>:
         </p>
 
         <div class="code-block floating-card">
@@ -167,7 +167,7 @@
       <h3 id="webpagetest"><a href="#webpagetest" class="anchor-link">WebPageTest</a></h3>
 
       <p>
-        <a href="https://www.webpagetest.org/">WebPageTest</a> 是一个卓越的web性能测试工具，同时是HTTP Archive的骨干。我们使用一个WebPageTest的 <a href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">私有实例</a> ，携带着私有的测试UA，它是测试每个web页面的实际浏览器。 桌面和移动网站在不同的配置下进行测试:
+        <a hreflang="en" href="https://www.webpagetest.org/">WebPageTest</a> 是一个卓越的web性能测试工具，同时是HTTP Archive的骨干。我们使用一个WebPageTest的 <a hreflang="en" href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">私有实例</a> ，携带着私有的测试UA，它是测试每个web页面的实际浏览器。 桌面和移动网站在不同的配置下进行测试:
       </p>
       <div class="table-wrap"><div class="table-wrap-container">
       <table>
@@ -231,11 +231,11 @@
       </p>
 
       <p>
-        测试是从两个位置发起的: 美国加利福尼亚和俄勒冈。HTTP Archive 维护它自己的测试代理硬件，位于加利福尼亚的<a href="https://archive.org">互联网档案</a> 数据中心。另外的测试代理是根据需要，添加了<a href="https://cloud.google.com/compute/docs/regions-zones/#locations">谷歌云</a>的位于俄勒冈的 us-west-1 。
+        测试是从两个位置发起的: 美国加利福尼亚和俄勒冈。HTTP Archive 维护它自己的测试代理硬件，位于加利福尼亚的<a hreflang="en" href="https://archive.org">互联网档案</a> 数据中心。另外的测试代理是根据需要，添加了<a hreflang="en" href="https://cloud.google.com/compute/docs/regions-zones/#locations">谷歌云</a>的位于俄勒冈的 us-west-1 。
       </p>
 
       <p>
-        HTTP Archive 的 WebPageTest 私有实例和最新的公有版本保持一致，使用 <a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自定义指标</a>来增强。 这些是测试结尾时在每个网站上评估测试的JavaScript片段<a href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">almanac.js</a> 。自定义指标包括一些其他情况下无法计算的指标，例如那些依赖于DOM状态的指标。
+        HTTP Archive 的 WebPageTest 私有实例和最新的公有版本保持一致，使用 <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自定义指标</a>来增强。 这些是测试结尾时在每个网站上评估测试的JavaScript片段<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">almanac.js</a> 。自定义指标包括一些其他情况下无法计算的指标，例如那些依赖于DOM状态的指标。
       </p>
 
       <p>
@@ -247,11 +247,11 @@
       <h3 id="lighthouse"><a href="#lighthouse" class="anchor-link">Lighthouse</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a> 是一个谷歌做的自动化的网站质量保证工具。它审核web页面以确保它们不包含阻碍用户体验的资源，如未优化的图像和不可访问的内容。
+        <a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a> 是一个谷歌做的自动化的网站质量保证工具。它审核web页面以确保它们不包含阻碍用户体验的资源，如未优化的图像和不可访问的内容。
       </p>
 
       <p>
-        HTTP Archive 为所有的移动网页运行最新版本的Lighthouse — 因为资源的限制问题并没有包括桌面版本的页面。在2019年七月的爬取中，HTTP Archive 使用了 <a href="https://github.com/GoogleChrome/lighthouse/releases/tag/v5.1.0">5.1.0</a> 版本的Lighthouse.
+        HTTP Archive 为所有的移动网页运行最新版本的Lighthouse — 因为资源的限制问题并没有包括桌面版本的页面。在2019年七月的爬取中，HTTP Archive 使用了 <a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v5.1.0">5.1.0</a> 版本的Lighthouse.
       </p>
 
       <p>
@@ -287,11 +287,11 @@
       </div></div>
 
       <p class="note">
-        * 请注意，Lighthouse通常的配置是CPU降速4倍，但是因为一个WebPageTest的<a href="https://github.com/GoogleChrome/lighthouse/issues/9668#issuecomment-535134232">bug</a> ， 在当时的测试是降速1倍。
+        * 请注意，Lighthouse通常的配置是CPU降速4倍，但是因为一个WebPageTest的<a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/issues/9668#issuecomment-535134232">bug</a> ， 在当时的测试是降速1倍。
       </p>
 
       <p>
-        如需了解更多关于Lighthouse以及HTTP Archive中可用的审计，请参考 <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse 开发者文档</a>。
+        如需了解更多关于Lighthouse以及HTTP Archive中可用的审计，请参考 <a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse 开发者文档</a>。
       </p>
     </section>
 
@@ -299,15 +299,15 @@
       <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
-        <a href="https://www.wappalyzer.com/">Wappalyzer</a> 是用于检测web页面使用的技术的工具。 有 <a href="https://www.wappalyzer.com/technologies">65 类</a>技术被用于测试， 从JavaScript框架到CMS平台，甚至加密货币挖掘。支持的技术超过1200种。
+        <a hreflang="en" href="https://www.wappalyzer.com/">Wappalyzer</a> 是用于检测web页面使用的技术的工具。 有 <a hreflang="en" href="https://www.wappalyzer.com/technologies">65 类</a>技术被用于测试， 从JavaScript框架到CMS平台，甚至加密货币挖掘。支持的技术超过1200种。
       </p>
 
       <p>
-        HTTP Archive 为所有的页面运行最新版本的 Wappalyzer。 截止2019年7月  Web Almanac 使用<a href="https://github.com/AliasIO/Wappalyzer/releases/tag/v5.8.3">5.8.3 版本</a> 的Wappalyzer。
+        HTTP Archive 为所有的页面运行最新版本的 Wappalyzer。 截止2019年7月  Web Almanac 使用<a hreflang="en" href="https://github.com/AliasIO/Wappalyzer/releases/tag/v5.8.3">5.8.3 版本</a> 的Wappalyzer。
       </p>
 
       <p>
-        Wappalyzer为很多章节提供动力，它分析开发人员工具的流行程度，例如 WordPress，Bootstrap，和jQuery。比如 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">电商</a> 和 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> 章节非常依赖于Wappalyzer探测出的各自的 <a href="https://www.wappalyzer.com/categories/ecommerce">电商</a> 和 <a href="https://www.wappalyzer.com/categories/cms">CMS</a> 类别。
+        Wappalyzer为很多章节提供动力，它分析开发人员工具的流行程度，例如 WordPress，Bootstrap，和jQuery。比如 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">电商</a> 和 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> 章节非常依赖于Wappalyzer探测出的各自的 <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">电商</a> 和 <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> 类别。
       </p>
 
       <p>
@@ -319,7 +319,7 @@
       <h3 id="chrome-ux-report"><a href="#chrome-ux-report" class="anchor-link">Chrome UX Report</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UX Report</a>是Chrome真实用户体验的公共数据集。体验是根据网站的来源分类的，例如 <code>https://www.example.com</code>。 数据集包括用户体验指标的分布，如绘制、加载、交互和布局稳定性。除了按月分组，体验也可以按维度划分，比如国家地理位置、外形因素(桌面、手机、平板电脑)和网络连接类型(4G、3G等)。
+        <a hreflang="en" href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome UX Report</a>是Chrome真实用户体验的公共数据集。体验是根据网站的来源分类的，例如 <code>https://www.example.com</code>。 数据集包括用户体验指标的分布，如绘制、加载、交互和布局稳定性。除了按月分组，体验也可以按维度划分，比如国家地理位置、外形因素(桌面、手机、平板电脑)和网络连接类型(4G、3G等)。
       </p>
 
       <p>
@@ -327,7 +327,7 @@
       </p>
 
       <p>
-        关于数据集，你可以在这里了解更多： <a href="https://web.dev/">web.dev</a>上的<a href="https://web.dev/chrome-ux-report-bigquery">在BigQuery使用Chrome UX报告</a> 指南。
+        关于数据集，你可以在这里了解更多： <a hreflang="en" href="https://web.dev/">web.dev</a>上的<a hreflang="en" href="https://web.dev/chrome-ux-report-bigquery">在BigQuery使用Chrome UX报告</a> 指南。
       </p>
     </section>
 
@@ -335,7 +335,7 @@
       <h3 id="third-party-web"><a href="#third-party-web">第三方资源网络</a></h3>
 
       <p>
-        <a href="https://www.thirdpartyweb.today/">第三方资源网络</a> 是一个研究工程，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>创立，他是 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">第三方资源网络</a> 章节的作者，它使用HTTP Archive和Lighthouse数据来识别和分析第三方资源对网络的影响。
+        <a hreflang="en" href="https://www.thirdpartyweb.today/">第三方资源网络</a> 是一个研究工程，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>创立，他是 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">第三方资源网络</a> 章节的作者，它使用HTTP Archive和Lighthouse数据来识别和分析第三方资源对网络的影响。
       </p>
 
       <p>
@@ -351,11 +351,11 @@
       <h3 id="rework-css"><a href="#rework-css" class="anchor-link">Rework CSS</a></h3>
 
       <p>
-        <a href="https://github.com/reworkcss/css">Rework CSS</a> 是一个基于JavaScript的CSS解析器。它采用整个样式表并生成一个json编码的对象，以区分每个样式规则、选择器、指令和值。
+        <a hreflang="en" href="https://github.com/reworkcss/css">Rework CSS</a> 是一个基于JavaScript的CSS解析器。它采用整个样式表并生成一个json编码的对象，以区分每个样式规则、选择器、指令和值。
       </p>
 
       <p>
-        在<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节，这个特殊用途的工具显著地提高了数据库中许多度量标准的准确性。所有外部样式表中的CSS和每个页面的内联样式块都被解析和查询，让这个分析工作成为可能。阅读<a href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">这段</a> 来了解更多关于它如何同BigQuery上的HTTP Archive数据集来集成。
+        在<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节，这个特殊用途的工具显著地提高了数据库中许多度量标准的准确性。所有外部样式表中的CSS和每个页面的内联样式块都被解析和查询，让这个分析工作成为可能。阅读<a hreflang="en" href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">这段</a> 来了解更多关于它如何同BigQuery上的HTTP Archive数据集来集成。
       </p>
     </section>
 
@@ -371,11 +371,11 @@
       <h3 id="brainstorming"><a href="#brainstorming" class="anchor-link">头脑风暴</a></h3>
 
       <p>
-        Web Almanac网络年鉴的想法始于2019年1月，当时是一个<a href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">HTTP Archive论坛</a>的帖子。 描述计划并召集支持。在2019年3月我们建立了一个<a href="http://bit.ly/web-almanac-brainstorm">公共头脑风暴文档</a> 网络社区的任何人都可以在此写下关于章节或指标的想法。这是一个至关重要的步骤，以确保我们关注于对社区有意义的事情，并在这个过程中包含各种各样的声音。
+        Web Almanac网络年鉴的想法始于2019年1月，当时是一个<a hreflang="en" href="https://discuss.httparchive.org/t/planning-the-web-almanac-2019/1553">HTTP Archive论坛</a>的帖子。 描述计划并召集支持。在2019年3月我们建立了一个<a href="http://bit.ly/web-almanac-brainstorm">公共头脑风暴文档</a> 网络社区的任何人都可以在此写下关于章节或指标的想法。这是一个至关重要的步骤，以确保我们关注于对社区有意义的事情，并在这个过程中包含各种各样的声音。
       </p>
 
       <p>
-        经过头脑风暴，20个章节被固化确定，我们开始 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/2">分配主题专家和对应的审稿人</a>。 这个过程有一些固有的偏见，因为要让志愿者致力于这样规模的项目是一个挑战。因此，许多贡献者是同一专业圈子的成员。Web Almanac网络年鉴的未来版本的一个明确目标是鼓励更多未被充分代表和异质的声音作为作者和审稿人。
+        经过头脑风暴，20个章节被固化确定，我们开始 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/2">分配主题专家和对应的审稿人</a>。 这个过程有一些固有的偏见，因为要让志愿者致力于这样规模的项目是一个挑战。因此，许多贡献者是同一专业圈子的成员。Web Almanac网络年鉴的未来版本的一个明确目标是鼓励更多未被充分代表和异质的声音作为作者和审稿人。
       </p>
 
       <p>
@@ -387,7 +387,7 @@
       <h3 id="analysis"><a href="#analysis" class="anchor-link">分析</a></h3>
 
       <p>
-        在2019年6月，随着指标和章节的列表稳定下来，数据分析师对指标的可行性进行了筛选。在一些情况下，<a href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">自定义指标</a> 需要被创建来填补我们分析能力的空白。
+        在2019年6月，随着指标和章节的列表稳定下来，数据分析师对指标的可行性进行了筛选。在一些情况下，<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/blob/master/custom_metrics/almanac.js">自定义指标</a> 需要被创建来填补我们分析能力的空白。
       </p>
 
       <p>
@@ -395,7 +395,7 @@
       </p>
 
       <p>
-        从2019年8月开始，数据分析师开始编写查询来提取每个指标的结果。总计 <strong>431个查询</strong> 是手动编写的! 你可以在这个项目的Github仓库的章节 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a> 的目录下浏览所有的查询代码。
+        从2019年8月开始，数据分析师开始编写查询来提取每个指标的结果。总计 <strong>431个查询</strong> 是手动编写的! 你可以在这个项目的Github仓库的章节 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2019">sql/2019</a> 的目录下浏览所有的查询代码。
       </p>
     </section>
 
@@ -423,7 +423,7 @@
       </p>
 
       <p>
-        如果您对2020年版的Web Almanac网络年鉴有兴趣，请填写 <a href="https://forms.gle/Qyf3q5pKgdH1cBhq5">感兴趣表格</a>. 我们非常希望倾听你的想法，让这个项目变得更好!
+        如果您对2020年版的Web Almanac网络年鉴有兴趣，请填写 <a hreflang="en" href="https://forms.gle/Qyf3q5pKgdH1cBhq5">感兴趣表格</a>. 我们非常希望倾听你的想法，让这个项目变得更好!
       </p>
     </section>
 {% endblock main_content %}
