--- a/src/templates/zh-CN/2020/methodology.html
+++ b/src/templates/zh-CN/2020/methodology.html
@@ -56,7 +56,7 @@
         <h2 id="overview"><a href="#overview" class="anchor-link">概述</a></h2>
 
         <p>
-          Web Almanac 是一个由 <a href="https://httparchive.org">HTTP Archive</a> 组织的项目. HTTP Archive 于2010年由Steve Souders创立，其任务是跟踪web是如何构建的。它按月评估数以百万计的网页，并使它的TB级别的元数据可供<a href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>分析。
+          Web Almanac 是一个由 <a hreflang="en" href="https://httparchive.org">HTTP Archive</a> 组织的项目. HTTP Archive 于2010年由Steve Souders创立，其任务是跟踪web是如何构建的。它按月评估数以百万计的网页，并使它的TB级别的元数据可供<a hreflang="en" href="https://httparchive.org/faq#how-do-i-use-bigquery-to-write-custom-queries-over-the-data">BigQuery</a>分析。
         </p>
 
         <p>
@@ -72,19 +72,19 @@
         <h2 id="dataset"><a href="#dataset" class="anchor-link">关于数据集</a></h2>
 
         <p>
-          HTTP Archive 数据集每月持续更新新的数据。对于2020年版的Web Almanac，除非本章另有说明，否则所有的指标都来自于2020年8月的抓取。这些结果<a href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">可以用<code>2020_08_01</code>为前缀在BigQuery公开的查询</a>。
+          HTTP Archive 数据集每月持续更新新的数据。对于2020年版的Web Almanac，除非本章另有说明，否则所有的指标都来自于2020年8月的抓取。这些结果<a hreflang="en" href="https://github.com/HTTPArchive/httparchive.org/blob/master/docs/gettingstarted_bigquery.md">可以用<code>2020_08_01</code>为前缀在BigQuery公开的查询</a>。
         </p>
 
         <p>
-          Web Almanac中列出的所有指标都可以通过BigQuery上的数据集公开重现。您可以在我们的<a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">GitHub 仓库</a>浏览我们的所有章节使用的查询。
+          Web Almanac中列出的所有指标都可以通过BigQuery上的数据集公开重现。您可以在我们的<a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">GitHub 仓库</a>浏览我们的所有章节使用的查询。
         </p>
 
         <p class="note">
-          请注意，其中一些查询相当大，如果你自己运行可能比较<a href="https://cloud.google.com/bigquery/pricing">昂贵</a> ，因为BigQuery是按TB收费。为了帮助控制你的开支，请看 Tim Kadlec的文章 <a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">在不破产的情况下来使用BigQuery</a>。
+          请注意，其中一些查询相当大，如果你自己运行可能比较<a hreflang="en" href="https://cloud.google.com/bigquery/pricing">昂贵</a> ，因为BigQuery是按TB收费。为了帮助控制你的开支，请看 Tim Kadlec的文章 <a hreflang="en" href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">在不破产的情况下来使用BigQuery</a>。
         </p>
 
         <p>
-          例如，要了解每个桌面和移动页面的JavaScript字节数的中位数，请参阅 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>:
+          例如，要了解每个桌面和移动页面的JavaScript字节数的中位数，请参阅 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/sql/2019/javascript/01_01b.sql">01_01b.sql</a>:
         </p>
 
         <div class="code-block floating-card">
@@ -128,7 +128,7 @@
         </p>
 
         <p>
-           与 <a href="../2019/methodology#websites">2019 Web Almanac</a>中的网站相比，被分析的网站数量有20-30%的增长。  <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='paulcalvano') }}">Paul Calvano</a> 在他的 <a href="https://paulcalvano.com/2020-09-29-growth-of-the-web-in-2020/">2020年Web的增长</a> 文章中分析了这一增长。
+           与 <a href="../2019/methodology#websites">2019 Web Almanac</a>中的网站相比，被分析的网站数量有20-30%的增长。  <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='paulcalvano') }}">Paul Calvano</a> 在他的 <a hreflang="en" href="https://paulcalvano.com/2020-09-29-growth-of-the-web-in-2020/">2020年Web的增长</a> 文章中分析了这一增长。
         </p>
 
         <p>
@@ -176,7 +176,7 @@
       <h3 id="webpagetest"><a href="#webpagetest" class="anchor-link">WebPageTest</a></h3>
 
       <p>
-        <a href="https://www.webpagetest.org/">WebPageTest</a> 是一个卓越的web性能测试工具，同时是HTTP Archive的骨干。我们使用一个WebPageTest的<a href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">私有实例</a> ，携带着私有的测试UA，它是测试每个web页面的实际浏览器。桌面和移动网站在不同的配置下进行测试:
+        <a hreflang="en" href="https://www.webpagetest.org/">WebPageTest</a> 是一个卓越的web性能测试工具，同时是HTTP Archive的骨干。我们使用一个WebPageTest的<a hreflang="en" href="https://github.com/WPO-Foundation/webpagetest-docs/blob/master/user/Private%20Instances/README.md">私有实例</a> ，携带着私有的测试UA，它是测试每个web页面的实际浏览器。桌面和移动网站在不同的配置下进行测试:
       </p>
       <div class="table-wrap"><div class="table-wrap-container">
       <table>
@@ -240,11 +240,11 @@
       </p>
 
       <p>
-        测试是从两个位置发起的: 美国加利福尼亚和俄勒冈。HTTP Archive 维护它自己的测试代理硬件，位于加利福尼亚的<a href="https://archive.org">互联网档案</a> 数据中心。另外的测试代理是根据需要，添加了<a href="https://cloud.google.com/compute/docs/regions-zones/#locations">谷歌云</a>的位于俄勒冈的 us-west-1 。
+        测试是从两个位置发起的: 美国加利福尼亚和俄勒冈。HTTP Archive 维护它自己的测试代理硬件，位于加利福尼亚的<a hreflang="en" href="https://archive.org">互联网档案</a> 数据中心。另外的测试代理是根据需要，添加了<a hreflang="en" href="https://cloud.google.com/compute/docs/regions-zones/#locations">谷歌云</a>的位于俄勒冈的 us-west-1 。
       </p>
 
       <p>
-         HTTP Archive 的 WebPageTest 私有实例和最新的公有版本保持一致，使用 <a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自定义指标</a>来增强。这些是测试结尾时在每个网站上评估测试的JavaScript片段。感谢众多数据分析师的 <a href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">贡献</a> ， 特别是<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='Tiggerito') }}">Tony McCreath</a>的<a href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">艰巨的努力</a>， 2020年版的Web Almanac 网络年鉴极大地扩展了HTTP Archive的测试基础架构的功能，增加了3000多行新代码。
+         HTTP Archive 的 WebPageTest 私有实例和最新的公有版本保持一致，使用 <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自定义指标</a>来增强。这些是测试结尾时在每个网站上评估测试的JavaScript片段。感谢众多数据分析师的 <a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/commits/master/custom_metrics">贡献</a> ， 特别是<a href="{{ url_for('contributors', year=year, lang=lang, _anchor='Tiggerito') }}">Tony McCreath</a>的<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/pulls?q=is%3Apr+author%3ATiggerito+sort%3Acreated-asc">艰巨的努力</a>， 2020年版的Web Almanac 网络年鉴极大地扩展了HTTP Archive的测试基础架构的功能，增加了3000多行新代码。
       </p>
 
       <p>
@@ -256,11 +256,11 @@
       <h3 id="lighthouse"><a href="#lighthouse" class="anchor-link">Lighthouse</a></h3>
 
       <p>
-        <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a> 是一个谷歌做的自动化的网站质量保证工具。它审核web页面以确保它们不包含阻碍用户体验的资源，如未优化的图像和不可访问的内容。
+        <a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a> 是一个谷歌做的自动化的网站质量保证工具。它审核web页面以确保它们不包含阻碍用户体验的资源，如未优化的图像和不可访问的内容。
       </p>
 
       <p>
-        HTTP Archive 为所有的移动网页运行最新版本的Lighthouse — 因为资源的限制问题并没有包括桌面版本的页面。 在2019年八月的爬取中， HTTP Archive 使用了 <a href="https://github.com/GoogleChrome/lighthouse/releases/tag/v6.2.0">6.2.0</a> 版本的Lighthouse。
+        HTTP Archive 为所有的移动网页运行最新版本的Lighthouse — 因为资源的限制问题并没有包括桌面版本的页面。 在2019年八月的爬取中， HTTP Archive 使用了 <a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v6.2.0">6.2.0</a> 版本的Lighthouse。
       </p>
 
       <p>
@@ -296,7 +296,7 @@
       </div></div>
 
       <p>
-        如需了解更多关于Lighthouse以及HTTP Archive中可用的审计，请参考 <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse 开发者文档</a>.
+        如需了解更多关于Lighthouse以及HTTP Archive中可用的审计，请参考 <a hreflang="en" href="https://developers.google.com/web/tools/lighthouse/">Lighthouse 开发者文档</a>.
       </p>
     </section>
 
@@ -304,15 +304,15 @@
       <h3 id="wappalyzer"><a href="#wappalyzer" class="anchor-link">Wappalyzer</a></h3>
 
       <p>
-        <a href="https://www.wappalyzer.com/">Wappalyzer</a> 是用于检测web页面使用的技术的工具。 有 <a href="https://www.wappalyzer.com/technologies">64 类</a>技术被用于测试， 从JavaScript框架到CMS平台，甚至加密货币挖掘。支持的技术超过1400种。
+        <a hreflang="en" href="https://www.wappalyzer.com/">Wappalyzer</a> 是用于检测web页面使用的技术的工具。 有 <a hreflang="en" href="https://www.wappalyzer.com/technologies">64 类</a>技术被用于测试， 从JavaScript框架到CMS平台，甚至加密货币挖掘。支持的技术超过1400种。
       </p>
 
       <p>
-        HTTP Archive 为所有的页面运行最新版本的 Wappalyzer。 截止2020年8月  Web Almanac 使用 <a href="https://github.com/AliasIO/Wappalyzer/releases/tag/v6.2.0">6.2.0 version</a> 的Wappalyzer。
+        HTTP Archive 为所有的页面运行最新版本的 Wappalyzer。 截止2020年8月  Web Almanac 使用 <a hreflang="en" href="https://github.com/AliasIO/Wappalyzer/releases/tag/v6.2.0">6.2.0 version</a> 的Wappalyzer。
       </p>
 
       <p>
-        Wappalyzer为很多章节提供动力，它分析开发人员工具的流行程度，例如 WordPress，Bootstrap，和jQuery。比如 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">电商</a> 和 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> 章节非常依赖于Wappalyzer探测出的各自的 <a href="https://www.wappalyzer.com/categories/ecommerce">电商</a> 和 <a href="https://www.wappalyzer.com/categories/cms">CMS</a> 类别。
+        Wappalyzer为很多章节提供动力，它分析开发人员工具的流行程度，例如 WordPress，Bootstrap，和jQuery。比如 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">电商</a> 和 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> 章节非常依赖于Wappalyzer探测出的各自的 <a hreflang="en" href="https://www.wappalyzer.com/categories/ecommerce">电商</a> 和 <a hreflang="en" href="https://www.wappalyzer.com/categories/cms">CMS</a> 类别。
       </p>
 
       <p>
@@ -324,7 +324,7 @@
       <h3 id="chrome-ux-report"><a href="#chrome-ux-report" class="anchor-link">Chrome用户体验报告</a></h3>
 
       <p>
-        The <a href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome用户体验报告</a> 是Chrome真实用户体验的公共数据集。体验是根据网站的来源分类的，例如<code>https://www.example.com</code>。数据集包括用户体验指标的分布，如绘制、加载、交互和布局稳定性。除了按月分组，体验也可以按维度划分，比如国家地理位置、外形因素(桌面、手机、平板电脑)和网络连接类型(4G、3G等)。
+        The <a hreflang="en" href="https://developers.google.com/web/tools/chrome-user-experience-report">Chrome用户体验报告</a> 是Chrome真实用户体验的公共数据集。体验是根据网站的来源分类的，例如<code>https://www.example.com</code>。数据集包括用户体验指标的分布，如绘制、加载、交互和布局稳定性。除了按月分组，体验也可以按维度划分，比如国家地理位置、外形因素(桌面、手机、平板电脑)和网络连接类型(4G、3G等)。
       </p>
 
       <p>
@@ -332,7 +332,7 @@
       </p>
 
       <p>
-       关于数据集，你可以在这里了解更多：<a href="https://web.dev/">web.dev</a>上的<a href="https://web.dev/chrome-ux-report-bigquery">在BigQuery使用Chrome 用户体验报告</a> 指南。
+       关于数据集，你可以在这里了解更多：<a hreflang="en" href="https://web.dev/">web.dev</a>上的<a hreflang="en" href="https://web.dev/chrome-ux-report-bigquery">在BigQuery使用Chrome 用户体验报告</a> 指南。
       </p>
     </section>
 
@@ -340,7 +340,7 @@
       <h3 id="third-party-web"><a href="#third-party-web" class="anchor-link">第三方资源网络</a></h3>
 
       <p>
-        <a href="https://www.thirdpartyweb.today/">第三方资源网络</a> 是一个研究工程，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>创立，他是<a href="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">2019 第三方资源</a> 章节的作者，它使用HTTP Archive和Lighthouse数据来识别和分析第三方资源对网络的影响。
+        <a hreflang="en" href="https://www.thirdpartyweb.today/">第三方资源网络</a> 是一个研究工程，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>创立，他是<a href="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">2019 第三方资源</a> 章节的作者，它使用HTTP Archive和Lighthouse数据来识别和分析第三方资源对网络的影响。
         </p>
 
       <p>
@@ -356,11 +356,11 @@
       <h3 id="rework-css"><a href="#rework-css" class="anchor-link">Rework CSS</a></h3>
 
       <p>
-        <a href="https://github.com/reworkcss/css">Rework CSS</a> 是一个基于JavaScript的CSS解析器。它采用整个样式表并生成一个json编码的对象，以区分每个样式规则、选择器、指令和值。
+        <a hreflang="en" href="https://github.com/reworkcss/css">Rework CSS</a> 是一个基于JavaScript的CSS解析器。它采用整个样式表并生成一个json编码的对象，以区分每个样式规则、选择器、指令和值。
       </p>
 
       <p>
-         在 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节，这个特殊用途的工具显著地提高了数据库中许多度量标准的准确性。所有外部样式表中的CSS和每个页面的内联样式块都被解析和查询，让这个分析工作成为可能。阅读<a href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">这段</a> 来了解更多关于它如何同BigQuery上的HTTP Archive数据集来集成。
+         在 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节，这个特殊用途的工具显著地提高了数据库中许多度量标准的准确性。所有外部样式表中的CSS和每个页面的内联样式块都被解析和查询，让这个分析工作成为可能。阅读<a hreflang="en" href="https://discuss.httparchive.org/t/analyzing-stylesheets-with-a-js-based-parser/1683">这段</a> 来了解更多关于它如何同BigQuery上的HTTP Archive数据集来集成。
       </p>
     </section>
 
@@ -368,7 +368,7 @@
       <h4 id="rework-utils"><a href="#rework-utils" class="anchor-link">Rework Utils</a></h4>
 
       <p>
-         今年的<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节是由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a> 领导的，对 CSS 的状态进行了显著的更加详细的研究，分布在 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020/css">100+ 个查询</a>。作为对比，这比2019年的查询多了2.5倍。为了使这种规模的分析可行， Lea 开源了 <a href="https://github.com/LeaVerou/rework-utils">Rework Utils</a>。这些实用程序通过提供有用的脚本来更轻松地提取CSS见解，将Rework的JSON数据提升到了一个新的水平。你在CSS章节中看到的大部分统计数据都是由这些脚本提供的。
+         今年的<a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节是由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a> 领导的，对 CSS 的状态进行了显著的更加详细的研究，分布在 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020/css">100+ 个查询</a>。作为对比，这比2019年的查询多了2.5倍。为了使这种规模的分析可行， Lea 开源了 <a hreflang="en" href="https://github.com/LeaVerou/rework-utils">Rework Utils</a>。这些实用程序通过提供有用的脚本来更轻松地提取CSS见解，将Rework的JSON数据提升到了一个新的水平。你在CSS章节中看到的大部分统计数据都是由这些脚本提供的。
       </p>
     </section>
 
@@ -376,7 +376,7 @@
         <h4 id="parsel"><a href="#parsel" class="anchor-link">Parsel</a></h4>
 
         <p>
-            <a href="https://projects.verou.me/parsel/">Parsel</a> 是一个CSS选择器解析器和特异性计算器， 最初是由 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节带头人 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a>撰写，并且作为一个独立的库进行开源。它被广泛用于所有与选择器和特异性相关的CSS指标。
+            <a hreflang="en" href="https://projects.verou.me/parsel/">Parsel</a> 是一个CSS选择器解析器和特异性计算器， 最初是由 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='css') }}">CSS</a> 章节带头人 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='LeaVerou') }}">Lea Verou</a>撰写，并且作为一个独立的库进行开源。它被广泛用于所有与选择器和特异性相关的CSS指标。
       </p>
     </section>
 
@@ -396,7 +396,7 @@
       </p>
 
       <p>
-        正如我们在 <a href="https://almanac.httparchive.org/en/2019/methodology#brainstorming">去年的方法论</a>指出的那样:
+        正如我们在 <a href="../2019/methodology#brainstorming">去年的方法论</a>指出的那样:
       </p>
 
       <blockquote>
@@ -435,7 +435,7 @@
       <h3 id="analysis"><a href="#analysis" class="anchor-link">分析</a></h3>
 
       <p>
-        在2020的7月和8月, 随着指标和章节的列表稳定下来，数据分析师对指标的可行性进行了筛选。在一些情况下，<a href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自定义指标</a> 需要被创建来填补我们分析能力的空白。
+        在2020的7月和8月, 随着指标和章节的列表稳定下来，数据分析师对指标的可行性进行了筛选。在一些情况下，<a hreflang="en" href="https://github.com/HTTPArchive/legacy.httparchive.org/tree/master/custom_metrics">自定义指标</a> 需要被创建来填补我们分析能力的空白。
       </p>
 
       <p>
@@ -443,7 +443,7 @@
         </p>
 
       <p>
-        数据分析者开始编写查询来提取每个指标的结果。总计数百个查询是手动编写的! 你可以在这个项目的Github仓库的章节 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">query repository</a>的目录下浏览所有的查询代码。
+        数据分析者开始编写查询来提取每个指标的结果。总计数百个查询是手动编写的! 你可以在这个项目的Github仓库的章节 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/tree/main/sql/2020">query repository</a>的目录下浏览所有的查询代码。
       </p>
     </section>
 
@@ -471,7 +471,7 @@
       </p>
 
       <p>
-        如果您对2021年版的Web Almanac网络年鉴有兴趣，请填写 <a href="https://forms.gle/VRBFegGAP7d99Bhp7">感兴趣表格</a>。让我们一起努力，追踪网络的状态!
+        如果您对2021年版的Web Almanac网络年鉴有兴趣，请填写 <a hreflang="en" href="https://forms.gle/VRBFegGAP7d99Bhp7">感兴趣表格</a>。让我们一起努力，追踪网络的状态!
       </p>
     </section>
 {% endblock main_content %}
