--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}{{ year }} 版{% endmacro %}
 
 {% block footer_title %}页脚导航{% endblock %}
-{% block copyright %}© Web Almanac.的许可是基于 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac.的许可是基于 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}无障碍可访问声明{% endblock %}
 
 {% block featured_chapter %}章节精选{% endblock %}
