--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -94,7 +94,7 @@
 {% macro edition(year) %}{{ year }} 版{% endmacro %}
 
 {% block footer_title %}註腳導覽{% endblock %}
-{% block copyright %}© Web Almanac. 版權聲明 <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
+{% block copyright %}© Web Almanac. 版權聲明 <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/LICENSE">Apache 2.0</a>.{% endblock %}
 {% block accessibility_statement %}無障礙網頁聲明{% endblock %}
 
 {% block featured_chapter %}章節精選{% endblock %}
