Fix linting errors

--- a/src/templates/fr/accessibility_statement.html
+++ b/src/templates/fr/accessibility_statement.html
@@ -41,7 +41,7 @@
         <ul>
           <li>Inclure l’accessibilité dans le cadre du développement de ce site Web.</li>
           <li>Vérifier l’accessibilité à l’aide des outils disponibles.</li>
-          <li>Être transparent sur les problèmes d’accessibilité <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+" hreflang="en">sur notre dépôt Github</a>.</li>
+          <li>Être transparent sur les problèmes d’accessibilité <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues?utf8=%E2%9C%93&q=label%3AAccessibility+">sur notre dépôt Github</a>.</li>
           <li>Résoudre les problèmes d’accessibilité soulevés en temps opportun.</li>
           <li>Publier et tenir à jour cette déclaration d’accessibilité.</li>
         </ul>
@@ -51,19 +51,19 @@
         <h2 id="statut-conformite"><a href="#statut-conformite" class="anchor-link">Statut de conformité</a></h2>
 
         <p>
-          Les <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/wcag/" hreflang="en">directives pour l’accessibilité du contenu Web (WCAG)</a> définissent les exigences pour les concepteurs et les développeurs afin d’améliorer l’accessibilité pour les personnes handicapées. Il définit trois niveaux de conformité&nbsp;: niveau A, niveau AA et niveau AAA. Le Web Almanac est partiellement conforme au niveau AAA des <a hreflang="en" href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a>. Partiellement conforme signifie que certaines parties du contenu ne sont pas entièrement conformes à la norme d’accessibilité.
+          Les <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/wcag/">directives pour l’accessibilité du contenu Web (WCAG)</a> définissent les exigences pour les concepteurs et les développeurs afin d’améliorer l’accessibilité pour les personnes handicapées. Il définit trois niveaux de conformité&nbsp;: niveau A, niveau AA et niveau AAA. Le Web Almanac est partiellement conforme au niveau AAA des <a hreflang="en" href="https://www.w3.org/TR/WCAG21/">WCAG 2.1</a>. Partiellement conforme signifie que certaines parties du contenu ne sont pas entièrement conformes à la norme d’accessibilité.
         </p>
 
         <p>
-          Nous nous considérons partiellement conformes parce que nous n’avons pas effectué un audit complet et vérifié de l’extérieur du site Web. Le site Web n’a pas non plus été examiné par des personnes utilisatrices de lecteurs d’écran, nous ne pouvons donc pas être sûrs de notre état actuel. Nous avons audité toutes les pages du site Web à l’aide d’un certain nombre d’outils, notamment <a hreflang="en" href="https://wave.webaim.org/" hreflang="en">l’outil d’accessibilité WAVE</a>, <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/" hreflang="en">l’inspecteur d’accessibilité Firefox</a> et le <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">plugin AX Chrome</a>.
+          Nous nous considérons partiellement conformes parce que nous n’avons pas effectué un audit complet et vérifié de l’extérieur du site Web. Le site Web n’a pas non plus été examiné par des personnes utilisatrices de lecteurs d’écran, nous ne pouvons donc pas être sûrs de notre état actuel. Nous avons audité toutes les pages du site Web à l’aide d’un certain nombre d’outils, notamment <a hreflang="en" href="https://wave.webaim.org/">l’outil d’accessibilité WAVE</a>, <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">l’inspecteur d’accessibilité Firefox</a> et le <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">plugin AX Chrome</a>.
         </p>
 
         <p>
-          Le but de l’Almanac Web est de fournir des informations détaillées sur l’état du Web. Bien que nous cherchions à nous assurer que tout le contenu est facilement lisible, même par des personnes non-expertes, la nature du matériel peut signifier qu’il peut y avoir un niveau d’expertise et de compréhension technologique nécessaire pour comprendre certains chapitres et certaines mesures, qui peuvent ne pas répondre au <a hreflang="en" href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level" hreflang="en">niveau WCAG 2.1. des directives de niveau de lecture AAA</a>.
+          Le but de l’Almanac Web est de fournir des informations détaillées sur l’état du Web. Bien que nous cherchions à nous assurer que tout le contenu est facilement lisible, même par des personnes non-expertes, la nature du matériel peut signifier qu’il peut y avoir un niveau d’expertise et de compréhension technologique nécessaire pour comprendre certains chapitres et certaines mesures, qui peuvent ne pas répondre au <a hreflang="en" href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">niveau WCAG 2.1. des directives de niveau de lecture AAA</a>.
         </p>
 
         <p>
-          Nous utilisons également Google Sheets pour certaines visualisations interactives, qui peuvent également ne pas être conformes aux normes d’accessibilité WCAG. Celles-ci sont chargées via des <code>iframes</code>, nous fournissons des images pour toutes nos illustrations et affichons uniquement des visualisations interactives lorsque le logiciel client le prend en charge. Si vous utilisez un navigateur Web et que vous ne souhaitez pas afficher les visualisations interactives, les images peuvent être appliquées en ajoutant un paramètre <code>?print</code> pour tous les chapitres, <a href="./2020/accessibility?print">consultez le chapitre Accessibilité en version imprimable</a> pour un exemple de ce type. Nous pouvons chercher à rendre cette fonctionnalité plus facile à activer si nécessaire, mais toutes les visualisations ont des descriptions textuelles détaillées, nous ne pensons donc pas que cela soit nécessaire. Si vous pensez que c’est une erreur, <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues" hreflang="en">n'hésitez pas à nous le dire</a>.
+          Nous utilisons également Google Sheets pour certaines visualisations interactives, qui peuvent également ne pas être conformes aux normes d’accessibilité WCAG. Celles-ci sont chargées via des <code>iframes</code>, nous fournissons des images pour toutes nos illustrations et affichons uniquement des visualisations interactives lorsque le logiciel client le prend en charge. Si vous utilisez un navigateur Web et que vous ne souhaitez pas afficher les visualisations interactives, les images peuvent être appliquées en ajoutant un paramètre <code>?print</code> pour tous les chapitres, <a href="./2020/accessibility?print">consultez le chapitre Accessibilité en version imprimable</a> pour un exemple de ce type. Nous pouvons chercher à rendre cette fonctionnalité plus facile à activer si nécessaire, mais toutes les visualisations ont des descriptions textuelles détaillées, nous ne pensons donc pas que cela soit nécessaire. Si vous pensez que c’est une erreur, <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">n'hésitez pas à nous le dire</a>.
         </p>
 
         <p>
@@ -71,7 +71,7 @@
         </p>
 
         <p>
-          La <a href="/static/pdfs/web_almanac_{{ year }}_{{ lang }}.pdf">version PDF du Web Almanac</a> suit les meilleures pratiques d’accessibilité PDF et répond au standard <a href="https://en.wikipedia.org/wiki/PDF/UA" hreflang="en">PDF/UA-1</a>.
+          La <a href="/static/pdfs/web_almanac_{{ year }}_{{ lang }}.pdf">version PDF du Web Almanac</a> suit les meilleures pratiques d’accessibilité PDF et répond au standard <a href="https://en.wikipedia.org/wiki/PDF/UA">PDF/UA-1</a>.
         </p>
 
         <h2 id="contenu-externe"><a href="#contenu-externe" class="anchor-link">Contenu externe</a></h2>
@@ -95,7 +95,7 @@
         <h2 id="specifications-techniques"><a href="#specifications-techniques" class="anchor-link">Spécifications techniques</a></h2>
 
         <p>
-          Le site Web est construit sur du HTML sémantique bien structuré (y compris <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/aria/" hreflang="en">WAI-ARIA</a> le cas échéant), amélioré avec CSS pour le style et JavaScript limité pour certains composants interactifs. Le site Web utilise des pratiques de développement modernes telles que les polices CSS Grid, Fetch et WOFF2, qui ne sont pas prises en charge dans les navigateurs plus anciens tels que IE 11. Le site Web est toujours entièrement fonctionnel dans ces navigateurs mais peut ne pas être aussi attrayant visuellement. Aucun plug-in ou bibliothèque supplémentaire ne devrait être nécessaire pour afficher le site Web.
+          Le site Web est construit sur du HTML sémantique bien structuré (y compris <a hreflang="en" href="https://www.w3.org/WAI/standards-guidelines/aria/">WAI-ARIA</a> le cas échéant), amélioré avec CSS pour le style et JavaScript limité pour certains composants interactifs. Le site Web utilise des pratiques de développement modernes telles que les polices CSS Grid, Fetch et WOFF2, qui ne sont pas prises en charge dans les navigateurs plus anciens tels que IE 11. Le site Web est toujours entièrement fonctionnel dans ces navigateurs mais peut ne pas être aussi attrayant visuellement. Aucun plug-in ou bibliothèque supplémentaire ne devrait être nécessaire pour afficher le site Web.
         </p>
         <p>
           Le Web Almanac PDF suit les mêmes normes d’accessibilité que le site Web et, en outre, est structurellement étiqueté pour faciliter l’accessibilité.
@@ -106,7 +106,7 @@
         <h2 id="approche-evaluation"><a href="#approche-evaluation" class="anchor-link">Approche d’évaluation</a></h2>
 
         <p>
-          Auto-évaluation&nbsp;: le contenu a été évalué par l’équipe Web Almanac en utilisant sa propre expertise et un certain nombre d’outils dont <a hreflang="en" href="https://wave.webaim.org/" hreflang="en">l’outil d’accessibilité WAVE</a>, le <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/" hreflang="en">l’inspecteur d’accessibilité Firefox</a> et le <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">plugin AX Chrome</a>. Le Web Almanac PDF a été testé avec une analyse d’accessibilité dans Acrobat Reader Pro DC.
+          Auto-évaluation&nbsp;: le contenu a été évalué par l’équipe Web Almanac en utilisant sa propre expertise et un certain nombre d’outils dont <a hreflang="en" href="https://wave.webaim.org/">l’outil d’accessibilité WAVE</a>, le <a hreflang="en" href="https://hacks.mozilla.org/2019/10/auditing-for-accessibility-problems-with-firefox-developer-tools/">l’inspecteur d’accessibilité Firefox</a> et le <a hreflang="en" href="https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd" rel="nofollow">plugin AX Chrome</a>. Le Web Almanac PDF a été testé avec une analyse d’accessibilité dans Acrobat Reader Pro DC.
         </p>
       </section>
 
@@ -114,7 +114,7 @@
         <h2 id="retour-information"><a href="#retour-information" class="anchor-link">Retour d’information</a></h2>
 
         <p>
-          Vos commentaires sur l’accessibilité de ce site Web nous intéressent. La meilleure façon de nous joindre serait <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues" hreflang="en">d’ouvrir un ticket sur Github</a> ou de nous envoyer un courriel à <a href="mailto:team@httparchive.org">team@httparchive.org</a>. Vous souhaitez contribuer directement&nbsp;? N’hésitez pas à proposer vos <span lang="en">Pull Requests</span>, elles seront les bienvenues. Le Web Almanac est un projet communautaire, géré par des bénévoles, et nous ne pouvons donc pas garantir un délai pour répondre aux commentaires, mais nous y répondrons dès que possible.
+          Vos commentaires sur l’accessibilité de ce site Web nous intéressent. La meilleure façon de nous joindre serait <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">d’ouvrir un ticket sur Github</a> ou de nous envoyer un courriel à <a href="mailto:team@httparchive.org">team@httparchive.org</a>. Vous souhaitez contribuer directement&nbsp;? N’hésitez pas à proposer vos <span lang="en">Pull Requests</span>, elles seront les bienvenues. Le Web Almanac est un projet communautaire, géré par des bénévoles, et nous ne pouvons donc pas garantir un délai pour répondre aux commentaires, mais nous y répondrons dès que possible.
         </p>
       </section>
 {% endblock %}
